add java epi 7.11,12

--- a/java_epi/ch07/ch07.링크드리스트.md
+++ b/java_epi/ch07/ch07.링크드리스트.md
@@ -472,5 +472,71 @@ public static ListNode<Integer> cyclicallyRightShiftList(ListNode<Integer> L, in
 
 이 알고리즘의 시간 복잡도는 O(n)이고 공간 복잡도는 O(1)이다.
 
+## 7.10 짝수-홀수 병합 구현하기
+숫자가 0부터 차례대로 단순 연결리스트의 노드에 쓰여 있다. 리스트의 짝수-홀수 병합이란, 단순 연결리스트의 연결 리스트의 연결 순서를 짝수 노드 다음에 홀수 노드가 등장하도록 배치하는 것이다. 짝수-홀수 병합을 구하는 프로그램을 작성하라.
 
+> 힌트: 임시 변수를 사용해 보자.
+
+무식한 방법으로 생각해 보면, 짝수와 홀수로 이루어진 리스트 두 개를 새로 할당한 뒤, 마지막에 두 리스트를 연결하면 된다. 이 방법의 시간 및 공간 복잡도는 O(n)이다.
+
+하지만 기존에 할당된 노드를 잘 사용하면 새로 리스트를 만들지 않고도 문제를 풀 수 있다. 두 개의 반복자를 사용하면 된다. 하나는 짝수 노드, 다른 하나는 홀수 노드를 반복하며 짝수 원소는 짝수 리스트에, 홀수 원소는 홀수 리스트에 연결시킨다. 표시자 변수(indicator variable)를 사용해서 추가할 리스트가 무엇인지 알려 주고, 마지막에 홀수 리스트를 짝수 리스트 뒤에 연결하면 된다.
+
+```java
+public static ListNode<Integer> evenOddMerge(ListNode<Integer> L) {
+    if (L == null) {
+        return L;
+    }
+
+    ListNode<Integer> evenDummyHead = new ListNode<>(0, null),
+                      oddDummyHead = new ListNode<>(0, null);
+    List<ListNode<Integer>> tails = Arrays.asList(evenDummyHead, oddDummyHead);
+    int turn = 0;
+    for (ListNode<Integer> iter = L; iter != null; iter = iter.next) {
+        tails.get(turn).next = iter;
+        tails.set(turn, tails.get(turn).next);
+        turn ^= 1;
+    }
+    tails.get(1).next = null;
+    tails.get(0).next = oddDummyHead.next;
+    return evenDummyHead.next;
+}
+```
+
+이 알고리즘의 시간 복잡도는 O(n)이고, 공간 복잡도는 O(1)이다.
+
+## 7.11 단순 연결리스트가 회문인지 확인하기
+배열에서 회문(palindrome)을 확인하는 방법은 간단하다. 하지만 시퀀스가 단순 연결리스트로 이루어져 있으면, 회문을 확인하는 작업이 더 어려워진다.
+
+단순 연결리스트가 주어졌을 떄 이 리스트가 회문인지 아닌지 확인하는 코드를 작성하라.
+
+> 힌트: 리스트를 앞뒤로 동시에 읽을 수 있다면 쉽게 풀 수 있다.
+
+무식한 방법은 처음 노드와 마지막 노드를 비교하고, 두 번째 노드와 뒤에서 두 번째 노드를 비교하는 작업을 반복하는 것이다. 리스트의 길이가 n일 때 O(n^2) 시간 복잡도가 소요되고 공간 복잡도는 O(1)이 된다.
+
+시간 복잡도가 O(n^2)인 이유는 마지막 노드, 마지막에서 두 번째 노드 등을 구하기 위해서는 리스트를 반복적으로 처음부터 순회해야 하기 때문이다. 단순 연결리스트의 첫 번째 노드를 구하는 작업은 O(1)이 소요된다. 따라서 O(n) 시간에 리스트의 절반을 역순으로 뒤집을 수 있으면 반복 탐색 과정을 피할 수 있다. 다시 말해, 기존의 리스트 절반과 역순 리스트 절반이 같다면 회문이 되고, 같지 않다면 회문이 아니게 된다. 이 방법은 리스트에 직접적인 수정을 가한다. 하지만 회문 테스트를 마친 뒤에 원래대로 복원해 주면 된다.
+
+```java
+public static boolean isLinkedListPalindrome(ListNode<Integer> L) {
+    // L의 뒤쪽 절반을 찾는다.
+    ListNode<Integer> slow = L, fast = L;
+    while (fast != null && fast.next != null) {
+        fast = fast.next.next;
+        slow = slow.next;
+    }
+
+    // 처음 절반과 역순으로 뒤집힌 다음 절반을 비교한다.
+    ListNode<Integer> firstHalfIter = L;
+    ListNode<Integer> secondHalfIter = ReverseLinkedListIterative.reverseLinkedList(slow);
+    while (secondHalfIter != null && firstHalfIter != null) {
+        if (!secondHalfIter.data.equals(firstHalfIter.data)) {
+            return false;
+        }
+        secondHalfIter = secondHalfIter.next;
+        firstHalfIter = firstHalfIter.next;
+    }
+    return true;
+}
+```
+
+이 알고리즘의 시간 복잡도는 O(n)이고 공간 복잡도는 O(1)이다.
 
