add java epi 7.12

--- a/java_epi/ch07/ch07.링크드리스트.md
+++ b/java_epi/ch07/ch07.링크드리스트.md
@@ -540,3 +540,46 @@ public static boolean isLinkedListPalindrome(ListNode<Integer> L) {
 
 이 알고리즘의 시간 복잡도는 O(n)이고 공간 복잡도는 O(1)이다.
 
+## 7.12 리스트의 피벗 구현하기
+어떤 정수 k를 기준으로 k보다 키(key)가 작은 노드는 왼쪽에, k보다 키가 큰 노드는 오른쪽에 배치하는 과정을 피버팅(pivoting)이라 한다.
+
+단순 연결리스트와 정수 k가 주어졌을 때 k를 기준으로 리스트를 피버팅하는 함수를 작성하라. 단, k 이전에 나온 노드들과 k 이후에 나온 노드들의 상대적인 순서는 변하지 않아야 한다. k와 키가 같은 노드들의 상대적인 순서도 변하면 안된다.
+
+> 힌트: 세 개의 영역을 독립적으로 형성한다.
+
+무식한 방법은 세 개의 리스트를 생성한 뒤, 입력 리스트를 순회하면서 노드의 키 값이 k보다 작은지, 같은지, 큰지에 따라 서로 다른 리스트에 넣어 준다. 그 뒤에 입력 리스트를 헤드부터 다시 순회하면서 세 개의 리스트에 있는 자료를 덮어쓰면 된다. 리스트의 노드의 개수를 n이라고 했을 때 시간 및 공간 복잡도는 O(n)이 된다.
+
+그런데 여기서 주목할 만한 사실 하나는 실제로 세 개의 리스트를 새로 할당하지 않아도 된다는 점이다. 기존 리스트를 한 번 순회하면서 각 노드를 세 개의 리스트로 다시 배치하면 된다. 리스트의 노드는 차례대로 순회하므로 노드의 상대적인 순서는 유지된다. 마지막에 이 세개의 리스트를 합치면 된다.
+
+```java
+public static ListNode<Integer> listPivoting(ListNode<Integer> L, int x) {
+    ListNode<Integer> lessHead = new ListNode<>(0, null);
+    ListNode<Integer> equalHead = new ListNode<>(0, null);
+    ListNode<Integer> greaterHead = new ListNode<>(0, null);
+    ListNode<Integer> lessIter = lessHead;
+    ListNode<Integer> equalIter = equalHead;
+    ListNode<Integer> greaterIter = greaterHead;
+    // 리스트를 세 개 생성한다.
+    while (iter != null) {
+        if (iter.data < x) {
+            lessIter.next = iter;
+            lessIter = iter;
+        } else if (iter.data == x) {
+            equalIter.next = iter;
+            equalIter = iter;
+        } else {
+            greaterIter.next = iter;
+            greaterIter = iter;
+        }
+        iter = iter.next;
+    }
+    // 세 개의 리스트를 합친다.
+    greaterIter.next = null;
+    equalIter.next = greaterHead.next;
+    lessIter.next = equalHead.next;
+    return lessHead.next;
+}
+```
+
+세 개의 리스트를 만드는 데 걸리는 시간은 O(n)이다. 세 개의 리스트를 합치는 데 걸린 시간은 O(1)이므로 전체 시간 복잡도는 O(n)이 된다. 공간 복잡도는 O(1)이다.
+
