--- a/java_epi/ch06/ch06.문자열.md
+++ b/java_epi/ch06/ch06.문자열.md
@@ -559,7 +559,7 @@ public static String encoding(String s) {
     int count = 1;
     StringBuilder ss = new StringBuilder();
     for (int i = 1; i < s.length(); i++) {
-        if (i == s.length() - 1 || s.charAt(i) != s.charAt(i - 1)) {
+        if (i == s.length() || s.charAt(i) != s.charAt(i - 1)) {
             ss.append(count);
             ss.append(s.charAt(i - 1));
             count = 1;
