--- a/java_epi/ch07/ch07.링크드리스트.md
+++ b/java_epi/ch07/ch07.링크드리스트.md
@@ -583,3 +583,33 @@ public static ListNode<Integer> listPivoting(ListNode<Integer> L, int x) {
 
 세 개의 리스트를 만드는 데 걸리는 시간은 O(n)이다. 세 개의 리스트를 합치는 데 걸린 시간은 O(1)이므로 전체 시간 복잡도는 O(n)이 된다. 공간 복잡도는 O(1)이다.
 
+## 7.13 리스트로 표현된 정수의 덧셈
+각 노드에 숫자가 쓰인 단순 연결리스트를 하나의 정수로 생각해 보자. 단, 최사위 숫자가 리스트의 앞에 온다고 가정한다. 이러한 방식은 종종 제한이 없는 정수를 표현하는데 쓰이곤 한다. 이 분제는 이런 방식으로 표현된 숫자가 주어졌을 때 덧셈을 수행한다.
+
+정수를 표현하는 단순 연결리스트 두 개가 주어졌을 때 이 두 정수의 합을 표현하는 리스트를 반환하는 프로그램을 작성하라. 단, 최하위 숫자가 먼저 등장한다.
+
+> 힌트: 먼저 각 쌍의 숫자의 합이 9를 넘는 경우가 없다고 가정하고 문제를 풀어 보자.
+
+리스트를 정수값으로 변환하는 건 간단하지 않다. 왜냐하면 정수 변수는 컴퓨터가 어떻게 설계되었느냐에 따라 길이가 정해져 있지만, 리스트로 표현된 정수의 크기에는 제한이 없기 때문이다..
+
+초등학교 때 배운 덧셈 방법을 흉내 내보자. 즉, 두 리스트에서 각 자릿수를 차례로 더해 준다. 이 방법의 핵심은 특정 위치에서 올림되는 수를 올바르게 처리하는 데 있다. 마지막 올림수가 0이 아닌 경우에는 새로운 노드를 하나 추가해야 한다는 사실을 명심하라.
+
+```java
+public static ListNode<Integer> addTwoNumbers(ListNode<Integer> L1, ListNode<Integer> L2) {
+    ListNode<Integer> dummyHead = new ListNode<>(0, null);
+    ListNode<Integer> placeIter = dummyHead;
+    int carry = 0;
+    while (L1 != null || L2 != null || carry != 0) {
+        int val = carry + (L1 != null ? L1.data : 0) + (L2 != null ? L2.data : 0);
+        L1 = L1 != null ? L1.next : null;
+        L2 = L2 != null ? L2.next : null;
+        placeIter.next = new ListNode<Integer>(val % 10, null);
+        carry = val / 10;
+        placeIter = placeIter.next;
+    }
+    return dummyHead.next;
+}
+```
+
+n과 m이 리스트의 길이라고 했을 때 시간 복잡도는 O(n + m)이고 공간 복잡도는 O(max(n,m))이다.
+
