add java epi 8.1

--- a/java_epi/ch08/ch08.스택과큐.md
+++ b/java_epi/ch08/ch08.스택과큐.md
@@ -38,3 +38,114 @@ Deque 인터페이스에서 스택과 관련된 핵심 메서드는 push(42), pe
 
 스택과 관련된 다른 유용한 메서드로는 descendingIterator()와 iterator()가 있다.
 
+## 문제 8.1 최댓값 찾는 API로 스택 구현하기
+push와 pop 외에 max 연산을 제공하는 스택 클래스를 설계하라. max() 메서드는 스택에 저장된 원소 중에서 가장 값이 큰 원소를 반환한다.
+
+> 힌트: 최댓값을 기억하기 위해 공간을 추가로 사용해보자.
+
+가장 간단한 방법부터 살펴보자. 스택을 배열로 구현했다면, 배열을 순회하면서 가장 값이 큰 원소를 찾으면 된다. 현재 스택의 원소가 n개일 때 이 방법의 시간 복잡도는 O(n)이고 공간 복잡도는 O(1)이다.
+
+힙, BST, 해시 테이블과 같은 추가 자료구조를 사용하면 시간 복잡도를 O(log n)으로 줄일 수 있다. 하지만 공간 복잡도는 O(n)으로 늘어나고 코드도 꽤 복잡해진다.
+
+스택의 최댓값을 기록하기 위해 추가로 M이라는 변수 하나를 사용한다고 생각해 보자. 원소를 삽입할 때 M을 갱신하는 건 쉽다. e가 새로 추가된 원소라고 했을 때 M = max(M,e)가 된다. 하지만 pop 연산을 할 때 M을 갱신하려면 경우에 따라 다시 남아 있는 원소를 모두 순회해야 하므로 시간이 꽤 걸린다.
+
+공간을 조금 더 사용하면 시간 복잡도를 극적으로 개선할 수 있다. 스택의 모든 원소에 대해서 현재 원소 아래에 있는 원소들 중에서 최댓값이 무엇인지 캐싱을 하면 된다. 단, pop 연산을 수행할 때 해당 캐시값도 함께 제거해야 한다.
+
+```java
+private static class ElementWithCacheMax {
+    public Integer element;
+    public Integer max;
+
+    public ElementWithCacheMax(Integer element, Integer max) {
+        this.element = element;
+        this.max = max;
+    }
+}
+
+public static class Stack {
+    // (원소, 최댓값) 쌍을 저장한다.
+    private Deque<ElementWithCacheMax> elementWithCachedMax = new LinkedList<>();
+
+    public boolean empty() {return elementWithCacheMax.isEmpty();}
+
+    public Integer max() {
+        if (empty()) {
+            throw new IllegalStateException("max(): empty stack");
+        }
+        return elementWithCacheMax.peek().max;
+    }
+
+    public Integer pop() {
+        if (empty()) {
+            throw new IllegalStateException("pop(): empty stack");
+        }
+        return elementWithCacheMax.removeFirst().element;
+    }
+
+    public void push(Integer x) {
+        elementWithCacheMax.addFirst(
+            new ElementWithCacheMax(x, Math.max(x, empty() ? x : max()))
+        );
+    }
+}
+```
+
+각 메서드의 시간 복잡도는 O(1)이다. 저장된 키에 관계없이 추가 공간 복잡도는 O(n)이 된다.
+
+입력에 따라 필요한 공간을 줄일 수 있다. 만약 새로 추가되는 원소 e가 기존의 최댓값보다 작다면 e는 절대 최댓값이 될 수 없으므로 캐시에 기록할 필요가 없다. 최댓값을 계속 기록하다 보면 중복이 발생하므로 각 최댓값이 몇 번 등장했는지 기록해 중복을 제거한다.
+
+```java
+private static class MaxWithCount {
+    public Integer max;
+    public Integer count;
+
+    public MaxWithCount(Integer max, Integer count) {
+        this.max = max;
+        this.count = count;
+    }
+}
+
+public static class Stack {
+    private Deque<Integer> element = new LinkedList<>();
+    private Deque<MaxWithCount> cachedMaxWithCount = new LinkedList<>();
+
+    public boolean empty() {return element.isEmpty();}
+
+    public Integer max() {
+        if (empty()) {
+            throw new IllegalStateException("max(): empty stack");
+        }
+        return cachedMaxWithCount.peekFirst().max;
+    }
+
+    public Integer pop() {
+        if (empty()) {
+            throw new IllegalStateException("pop(): empty stack");
+        }
+        Integer popElement = element.removeFirst();
+        if (popElement.equals(cachedMaxWithCount.peekFirst().max)) {
+            cachedMaxWithCount.peekFirst().count = cachedMaxWithCount.peekFirst().count - 1;
+            if (cachedMaxWithCount.peekFirst().count.equals(0)) {
+                cachedMaxWithCount.removeFirst();
+            }
+        }
+        return popElement;
+    }
+
+    public void push(Integer x) {
+        element.addFirst(x);
+        if (!cachedMaxWithCount.isEmpty()) {
+            if (Integer.compare(x, cachedMaxWithCount.peekFirst().max) == 0) {
+                cachedMaxWithCount.peekFirst().count += 1;
+            } else if (Integer.compare(x, cachedMaxWithCount.peekFirst().max) > 0) {
+                cachedMaxWithCount.addFirst(new MaxWithCount(x, 1));
+            }
+        } else {
+            cachedMaxWithCount.addFirst(new MaxWithCount(x, 1));
+        }
+    }
+}
+```
+
+최악의 경우(추가되는 키값이 항상 이전보다 큰 경우)의 공간 복잡도는 O(n)이다. 하지만 키값에 중복이 많고 최댓값이 자주 바뀌지 않는다면 추가로 필요한 공간 복잡도는 작을 것이다. 최고의 경우에는 O(1)이 된다. 각 메서드의 시간 복잡도는 여전히 O(1)이다.
+
