add java epi 8.1

--- a/java_epi/ch08/ch08.스택과큐.md
+++ b/java_epi/ch08/ch08.스택과큐.md
@@ -149,3 +149,55 @@ public static class Stack {
 
 최악의 경우(추가되는 키값이 항상 이전보다 큰 경우)의 공간 복잡도는 O(n)이다. 하지만 키값에 중복이 많고 최댓값이 자주 바뀌지 않는다면 추가로 필요한 공간 복잡도는 작을 것이다. 최고의 경우에는 O(1)이 된다. 각 메서드의 시간 복잡도는 여전히 O(1)이다.
 
+## 문제 8.2 RPN 수식 계산하기
+다음 조건을 만족하는 문자열은 RPN(Reverse Polish notation, 역 폴란드 표기법)을 따르는 산술 표현식이라 한다.
+
+1. 길이가 1 이상인 숫자로 이루어진 문자열. '-'로 시작하는 경우도 있다. 예를 들어 "6", "123", "-42"가 있다.
+2. A와 B가 RPN 수식을 만족하고 ○가 +, -, x, / 중 하나일 때 "A, B, ○"의 형태로 작성된 문자열이다.
+
+RPN 수식을 계산하면 유일한 정수값이 나오는데, 이 값은 재귀적으로 구할 수 있다. 기저 사례(base case)는 1번 규칙, 즉 10진법으로 표기된 정수이다. 재귀 상태(recursive case)는 2번 규칙과 같고, RPN 수식을 자연스럽게 계산하면 된다. 즉, A가 2이고 B가 3일 때 "A, B, *"는 6과 같다.
+
+RPN 수식이 주어졌을 때 이 수식의 계산 결과를 반환하는 프로그램을 작성하라.
+
+> 힌트: 부분 수식을 계산한 뒤 그 값을 스택에 저장한다. 연산자는 어떻게 처리하면 될까?
+
+RPN 예제로 먼저 시작해 보자. "3, 4, +, 2, *, 1, +"은 (3+4) * 2 + 1로 표현할 수 있다. 손으로 이 수식을 계산하려면 왼쪽에서 오른쪽으로 읽으면서 계산하면 된다. 3과 4를 기록한 뒤 +를 3과 4에 적용하고 그 결과를 7을 다시 기록한다. 이제 다시는 3과 4를 읽을 일이 없다. 그 다음에는 2를 곱한 결과인 14를 기록한다. 마지막으로 1을 더하면 최종 결과 15를 얻을 수 있다.
+
+연산자를 만났을 때 중간 결과에 연산자를 적용해야 하므로 중간 결과를 기록해야 한다. 중간 결과는 후입선출법으로 추가되고 제거된다. 따라서 자연스럽게 스택을 사용해서 RPN 수식을 계산할 것이다.
+
+```java
+public static int eval(String RPNExpression) {
+    Deque<Integer> intermediateResults = new LinkedList<>();
+    String delimiter = ",";
+    String[] symbols = RPNExpression.split(delimiter);
+    for (String token : symbols) {
+        if (token.length() == 1 && "+-*/".contains(token)) {
+            final int y = intermediateResults.removeFirst();
+            final int x = intermediateResults.removeFirst();
+            switch (token.charAt(0)) {
+                case '+':
+                    intermediateResults.addFirst(x + y);
+                    break;
+                case '-':
+                    intermediateResults.addFirst(x - y);
+                    break;
+                case '*':
+                    intermediateResults.addFirst(x * y);
+                    break;
+                case '/':
+                    intermediateResults.addFirst(x / y);
+                    break;
+                default:
+                    throw new IllegalArgumentException("Malformed RPN at : " + token);
+            }
+        } else {
+            // token이 숫자일 경우
+            intermediateResults.addFirst(Integer.parseInt(token));
+        }
+    }
+    return intermediateResults.removeFirst();
+}
+```
+
+각 문자마다 O(1)의 연산을 수행하므로 문자열의 길이가 n일 때 시간 복잡도는 O(n)이 된다.
+
