--- a/java_epi/ch08/ch08.스택과큐.md
+++ b/java_epi/ch08/ch08.스택과큐.md
@@ -201,3 +201,46 @@ public static int eval(String RPNExpression) {
 
 각 문자마다 O(1)의 연산을 수행하므로 문자열의 길이가 n일 때 시간 복잡도는 O(n)이 된다.
 
+## 문제 8.3 문자열이 올바른 형태인지 확인하기
+서로 다른 괄호 종류가 올바른 순서로 짝을 이루고 있을 때, 문자열을 '올바른 형태'라고 말한다.
+
+예를 들어 "([]){()}" 혹은 "[()[]{()()}]"은 올바른 형태이다. 하지만 "{)" 혹은 "[()[]{()}()"은 올바른 형태가 아니다.
+
+'(', ')', '[', ']', '{', '}'로 이루어진 문자열이 올바른 형태인지 확인하는 프로그램을 작성하라.
+
+> 힌트: 어떤 왼쪽 괄호와 어떤 오른쪽 괄호가 짝을 이루는가?
+
+"()(())"와 같이 소괄호로만 이루어진 문자열부터 시작하자. 만약 해당 문자열이 올바른 형태라면 오른쪽 괄호는 가장 가까운 왼쪽 괄호와 짝을 이루게 된다. 따라서 왼쪽에서 시작해서 왼쪽 괄호를 만나면 이를 저장한다. 그리고 오른쪽 괄호를 만났을 때 저장된 왼쪽 괄호와 짝을 이루는지 확인한다. 중괄호와 대괄호가 없으므로 현재까지 짝을 이루지 않은 왼쪽 소괄호의 개수를 기록한다.
+
+이를 일반적인 경우에 대입해 보자. 즉, 실제로 짝을 이루지 않은 왼쪽 소괄호, 중괄호, 대괄호를 모두 저장한다. 단순히 변수 세 개를 사용해서 개수만 기록하면 가장 마지막에 짝을 이루지 않는 괄호가 무엇인지 알 수 없다. 따라서 스택을 통해 짝을 이루지 않는 왼쪽 괄호를 기록해 나가면, 스택의 가장 위에 있는 괄호가 가장 마지막에 짝을 짝을 이루지 않는 괄호가 될 것이다.
+
+오른쪽 괄호가 등장했을 때 스택이 비어 있거나 스택의 최근 괄호와 형태가 다르다면 이는 주어진 문자열이 올바른 형태가 아니라는 뜻이다. 예를 들어, 입력 문자열이 "((][)"라면, "]"을 처리할 때 스택의 최근 괄호는 '('이므로 이 문자열은 올바른 형태가 아니다.
+
+반대로 입력 문자열이 "(()[])"이라면, "]"을 처리할 때 스택의 최근 괄호는 '['이므로 계속 진행한다.
+
+만약 모든 문자를 확인했는데도 스택이 비지 않는다면 짝을 이루지 않은 왼쪽 괄호가 남아 있다는 뜻이므로, 이 경우도 올바른 형태가 아니다.
+
+```java
+public static boolean isWellFormed(String s) {
+    Deque<Character> leftChars = new LinkedList<>();
+    for (int i = 0; i < s.length(); i++) {
+        if (s.charAt(i) == '(' || s.charAt(i) == '{' || s.charAt(i) == '[') {
+            leftChars.addFirst(s.charAt(i));
+        } else {
+            if (leftChars.isEmpty()) {
+                return false;
+            }
+            if ((s.charAt(i) == ')' && leftChars.peekFirst() != '(')
+                || (s.charAt(i) == '}' && leftChars.peekFirst() != '{')
+                || (s.charAt(i) == ']' && leftChars.peekFirst() != '[')) {
+                return false;
+            } else {
+                leftChars.removeFirst();
+            }
+        }
+        return leftChars.isEmpty();
+    }
+}
+```
+
+각 문자마다 O(1)의 연산을 수행하므로 시간 복잡도는 O(n)이다.
