--- a/java_epi/ch08/ch08.스택과큐.md
+++ b/java_epi/ch08/ch08.스택과큐.md
@@ -244,3 +244,67 @@ public static boolean isWellFormed(String s) {
 ```
 
 각 문자마다 O(1)의 연산을 수행하므로 시간 복잡도는 O(n)이다.
+
+## 문제 8.4 경로 이름 표준화하기
+파일 혹은 디렉터리에는 문자열로 이루어진 경로가 존재한다. 그 경로는 루트에서 시작하는 절대 경로(예를 들어 /usr/bin/gcc)일수도 있고, 현재 디렉터리에서 시작하는 상대 경로(예를 들어 script/test)일 수도 있다.
+
+같은 디렉터리는 여러 가지 방법으로 경로를 표현할 수 있다. 예를 들어 /usr/lib/../bin/gcc와 script//./../scripts/test/././는 앞에서 예로 든 절대 경로와 상대 경로를 나타낸다.
+
+경로가 주어졌을 때 같은 경로를 나타내는 가장 짧은 경로를 반환하라. 각 디렉터리와 파일의 이름은 알파벳과 숫자로만 이루어졌다고 가정해도 좋다. 하위 디렉터리의 이름은 슬래시(/), 현재 디렉터리(.), 부모 디렉터리(..)의 조합으로 나타낼 수 있다.
+
+> 힌트: 각각의 경우를 잘 살펴보라. '.'와 '..'는 어떻게 처리할 것인지 고민하고, 유효하지 않은 경로를 조심하라.
+
+자연스럽게 접근해 보자. 문자열을 왼쪽에서 오른쪽으로 읽으면서 슬래시(/)로 나누어 생각해볼 수 있다. 디렉터리와 파일 이름을 따로 기록한다. 만약 '..'를 만나게 되면 가장 최근의 이름을 삭제하고 디렉터리 계층에서 한 칸 위로 올라간다. 이름은 후입선출법으로 처리되므로 스택을 사용하면 된다. '.'은 건너뛰어도 좋다.
+
+만약 문자열이 '/'로 시작한다면 한 칸 위로 올라갈 수 없다. 이를 스택에 기록한다. 만약 스택이 '/'로 시작하지 않는다면 '..'를 만났을 때 스택이 비어 있을 수도 있다. 여기서 '..'는 현재 경로의 윗단계에서 시작하라는 의미와 같다. 가장 짧은 경로를 표현하기 위해 이것도 기록할 필요가 있다. 최종적으로 스택에는 가장 짧은 경로가 기록되어 있을 것이다.
+
+예를 들어 문자열이 "sc//./../tc/awk/././"일 때 스택에는 <sc> , <>, <tc>, <tc,awk>가 저장된다. 세 개의 '.'와 'sc/' 다음의 '/'는 건너뛰었다.
+
+```java
+public static String shortestEquivalentPath(String path) {
+    if (path.equals("")) {
+        throw new IllegalArgumentException("Empty string is not a legal path.");
+    }
+
+    Deque<String> pathNames = new LinkedList<>();
+    // 특별한 경우: "/"로 시작한 경우, 절대 경로를 나타낸다.
+    if (path.startsWith("/")) {
+        pathNames.addFirst("/");
+    }
+
+    for (String token : path.split("/")) {
+        if (token.equals("..")) {
+            if (pathNames.isEmpty() || pathNames.peekFirst().equals("..")) {
+                pathNames.addFirst(token);
+            } else {
+                if (pathNames.peekFirst().equals("/")) {
+                    throw new IllegalArgumentException(
+                        "Path error, trying to go up root " + path
+                    );
+                }
+                pathNames.removeFirst();
+            }
+        } else if (!token.equals(".") && !token.isEmpty()) {
+            // 이름이 와야 한다.
+            pathNames.addFirst(token);
+        }
+    }
+
+    StringBuilder result = new StringBuilder();
+    if (!pathNames.isEmpty()) {
+        Iterator<String> it = pathNames.descendingIterator();
+        String prev = it.next();
+        result.append(prev);
+        while (it.hasNext()) {
+            if (!prev.equals("/")) {
+                result.append("/");
+            }
+            prev = it.next();
+            result.append(prev);
+        }
+    }
+    return result.toString();
+}
+```
+경로의 길이가 n일 때 시간 복잡도는 O(n)이 된다.
+
