update tct ch10 graph theory, add quiz

--- a/this_is_coding_test/graph/그래프이론.md
+++ b/this_is_coding_test/graph/그래프이론.md
@@ -451,7 +451,7 @@ else:
 
 또한 최소 신장 트리에 포함되어 있는 간선의 비용만 모두 더하면, 그 값이 최종 비용에 해당한다. 위의 예시에서 총비용은 159이다. 최소 신장 트리를 만드는데 필요한 비용을 계산하는 크루스칼 알고리즘의 소스코드는 다음과 같다.
 
-[10-5_크루스칼.py](10-5_크루스칼.py)
+[10-5_최소_신장_트리_크루스칼_알고리즘.py](10-5_최소_신장_트리_크루스칼_알고리즘.py)
 ```python
 # 특정한 원소가 속한 집합을 찾기
 def find_parent(parent, x):
