--- a/java_epi/ch08/ch08.스택과큐.md
+++ b/java_epi/ch08/ch08.스택과큐.md
@@ -308,3 +308,54 @@ public static String shortestEquivalentPath(String path) {
 ```
 경로의 길이가 n일 때 시간 복잡도는 O(n)이 된다.
 
+## 문제 8.5 노을이 보이는 건물 찾기
+서쪽으로 창문이 나 있는 일련의 건물이 입력으로 주어진다. 건물은 서쪽에서 동쪽 방향으로 직선 배치되어 있으므로, 높이가 같거나 낮은 건물이 동쪽에 있다면 그 건물에서는 노을을 볼 수 없다.
+
+동쪽에서 서쪽 방향으로 차례대로 건물을 처리한다고 했을 때 노을을 볼 수 있는 건물의 집합을 반환하는 알고리즘을 설계하라. 모든 건물의 높이는 주어져 있다.
+
+> 힌트: 건물에서 노을을 볼 수 없는 건 언제인가.
+
+무식한 방법을 생각해 보자. 모든 건물을 배열에 저장한 뒤, 배열을 거꾸로 읽으면서 가장 높은 건물의 높이를 기록한다. 해당 높이보다 낮거나 같은 건물은 노을을 볼 수 없다.
+
+건물의 개수를 n이라고 했을 때 시간 및 공간 복잡도는 O(n)이 된다.
+
+더 높은 건물이 서쪽에 있다면 노을을 볼 수 없다. 이 사실을 사용하면 공간 복잡도를 줄일 수 있다. 먼저 노을을 볼 수 있는 건물들의 후보를 기록해 놓는다. 새로운 건물이 등장하면 기존 건물들의 노을 뷰를 가릴 수도 있다. 기존 건물의 집합과 현재 건물의 높이를 비교하면서 새로운 건물이 다른 건물의 노을 뷰를 가리는지 확인한다. 이때 기존 건물들을 해시셋(hash set)에 기록해 놓는데, 해시셋을 이용할 경우 새로운 건물을 처리할 때마다 모든 건물의 노을 뷰를 다 훑어 봐야 한다.
+
+만약 새로운 건물의 높이가 현재 건물들보다 작다면 현재 집합의 건물은 새로운 건물에게 방해받지 않는다. 따라서 후입선출법(last-in first-out)을 통해 건물을 저장한다면 모든 건물을 훑어 보지 않고 빠르게 방해받는 건물들을 골라낼 수 있다.
+
+노을을 볼 수 있는 건물들을 스택에 저장한다. 건물 b를 처리할 때마다, 건물 b보다 높은 건물이 나올 때까지 스택에서 건물을 제외한다. 이를 통해 b보다 낮은 모든 건물을 제거한다.
+
+경우에 따라 스택에서 건물을 반복적으로 빼내야 할 수도 있지만, 전체적으로 각 건물은 최대 한번 스택에 넣었다가 최대 한번 빼내진다. 따라서 건물을 처리하는 시간 복잡도는 O(n)이 되고, 최종적으로 스택에는 현재 노을을 볼 수 있는 건물만 들어 있게 된다.
+
+최악의 경우에는 노을을 볼 수 있는 건물이 오직 한 개만 존재한다. 가장 서쪽에 있는 건물이 제일 높고 나머지 n-1개의 건물들은 동쪽에서 서쪽으로 높이가 낮아지는 경우다. 그렇더라도 메모리는 기껏해야 O(n)만큼 사용한다. 최선의 경우라면, 건물들은 높이가 증가하는 순서대로 나열되어 있다. 이때 O(1)의 공간을 사용한다. 반면에 무식한 방법은 언제나 O(n)의 공간을 사용한다.
+
+```java
+private static class BuildingWithHeight {
+    public Integer id;
+    public Integer height;
+
+    public BuildingWithHeight(Integer id, Integer height) {
+        this.id = id;
+        this.height = height;
+    }
+}
+
+public static Deque<BuildingWithHeight> examineBuildingWithSunset(Iterator<Integer> sequence) {
+    int buildingIdx = 0;
+    Deque<BuildingWithHeight> candidates = new ArrayDeque<>();
+    while (sequence.hasNext()) {
+        Integer buildingHeight = sequence.next();
+        while (!candidates.isEmpty() && (Integer.compare(buildingHeight, candidates.peekLast().height) >= 0)) {
+            candidates.removeLast();
+        }
+        candidates.addLast(new BuildingWithHeight(buildingIdx++, buildingHeight));
+    }
+
+    List<Integer> buildingWithSunset = new ArrayList<>();
+    while (!candidates.isEmpty()) {
+        buildingWithSunset.add(candidates.removeLast().id);
+    }
+    return buildingWithSunset;
+}
+```
+
