add about queue

--- a/java_epi/ch08/ch08.스택과큐.md
+++ b/java_epi/ch08/ch08.스택과큐.md
@@ -359,3 +359,49 @@ public static Deque<BuildingWithHeight> examineBuildingWithSunset(Iterator<Integ
 }
 ```
 
+## 큐
+큐에는 enqueue와 dequeue 연산이 존재한다(만약 큐가 비어 있다면 dequeue는 null을 반환하거나 예외 처리를 한다). 원소가 추가되고 삭제되는 순서는 선입선출법(first-in, first-out)을 따른다. 가장 나중에 삽입된 원소는 테일 혹은 뒷 원소라 부르고, 가장 먼저 삽입된 원소는 헤드 혹은 앞 원소라 부른다.
+
+큐를 연결리스트로 구현하면, 두 연산의 시간 복잡도는 O(1)이 된다. 큐 API는 종종 다른 연산을 제공하기도 한다. 예를 들어 큐의 헤드를 반환하긴 하지만 제거하지 않거나, 테일을 반환하긴 하지만 제거하지 않는 등의 연산이 있을 수 있다. 큐는 배열로 구현할 수도 있다.
+
+양방향 큐(double-ended queue)라고도 부르는 덱(deque)은 모든 삽입과 삭제가 리스트의 양 끝, 그러니까 앞(head)과 뒤(tail), 둘 중 하나에서 일어나는 이중 연결리스트다. 앞에 원소를 삽입하는 것을 push, 뒤에 삽입하는 것을 inject라고 한다. 그리고 앞의 원소를 제거하는 것을 pop, 뒤의 원소를 제거하는 것을 eject라고 한다.(언어와 라이브러리에 따라 다르게 부르기도 한다.)
+
+## 큐 부트캠프
+다음 프로그램은 기본적인 큐 API인 enqueue와 dequeue, 그리고 현재까지의 원소 중에서 가장 큰 원소를 반환하는 max() 메서드를 기존의 라이브러리를 사용하여 구현한 것이다. 큐 라이브러리 객체를 가리키는 private 변수와 해당 변수를 통해 큐의 메서드를 사용했다.
+
+```java
+public class QueueWithMaxInfo {
+    private Deque<Integer> data = new LinkedList<>();
+
+    public void enqueue(Integer x) {data.add(x);}
+
+    public Integer dequeue() {return data.removeFirse();}
+
+    public Integer max() {
+        if (!data.isEmpty()) {
+            return Collections.max(data);
+        }
+        throw new IllegalStateException("Cannot perform max() on empty queue.");
+    }
+}
+```
+
+enqueue와 dequeue의 시간 복잡도는 큐 라이브러리의 시간 복잡도와 같은 O(1)이다. 최댓값을 찾는 시간 복잡도는 n개의 원소가 들어 있을 때 O(n)이 된다. 문제 8.9의 해법에서는 적절한 예제를 통해, 최댓값을 찾는 시간 복잡도를 어떻게 O(1)로 개선할 수 있는지 보여준다.
+
+> 큐의 FIFO 특성을 언제 어디서 사용할 수 있는지 알아 두자. 예를 들어 큐는 원소의 순서를 유지해야 할 때 유용하다.
+
+## 큐 라이브러리 이해하기
+큐를 조작하는 좋은 방법은 Deque 인터페이스를 사용하는 것이다. 연결리스트 클래스는 해당 인터페이스를 구현한 이중 연결리스트이고, 효율적으로 (O(1)시간) 큐와 스택의 기능들을 제공한다.
+
+Deque 인터페이스에 있는 큐와 관련된 핵심 메서드는 addLast(3.14), removeFirst(), getFirst(), offerLast(3.14), pollFirst(), peekFirst()이다.
+
+- addLast(3.14)는 원소를 삽입한다. Deque를 구현한 클래스에는 삽입할 수 있는 원소의 개수에 제한이 있을 수도 있고 null을 삽입하는 것을 금지할 수도 있지만, 연결리스트는 그렇지 않다.
+- removeFirst()는 덱의 첫 번째 원소를 반환한 뒤에 삭제한다. 덱이 비어 있으면 NoSuchElementException을 던진다.
+- getFirst()는 덱의 첫 번째 원소를 반환하지만 삭제하지는 않는다. 덱이 비어 있으면 NoSuchElementException을 던진다.
+
+메서드 offerLast('a'), pollFirst(), peekFirst()는 addLast('a'), removeFirst(), getFirst()와 매우 비슷하다. 하지만 앞의 메서드들은 예외 사용에 좀 더 소극적이다. 예를 들어, 큐가 꽉 찬 상태에서 offerLast('a')를 호출하면, 삽입이 실패했다는 의미로 false를 반환하지만, addLast('a')는 예외를 던진다. pollFirst()와 peekFirst()는 큐가 비어 있을 때 null을 반환한다. 따라서 큐에 null 값이 삽입될 수 있는 경우라면, 이 메서드가 반환한 null이 큐에서 가져온 첫 번째 값을 의미하는지, 아니면 큐가 비어 있다는 걸 의미하는지 모호해진다.
+
+큐와 관련된 또 다른 유용한 메서드는 descendingIterator()와 iterator()이다. Deque은 Queue의 하위 인터페이스이다. 즉, Queue의 메서드 add(123), offer(123), remove(), poll(), element(), andpeek()는 각각 toaddLast(123), offerLast(), removeFirst(), pollFirst(), getFirst(), peekFirst()와 같다. 뒤의 메서드들은 이름이 Deque과 비슷한 방식으로 지어졌다. 따라서 뒤의 메서드를 좀 더 선호한다.
+
+
+
