add java epi 8.6

--- a/java_epi/ch08/ch08.스택과큐.md
+++ b/java_epi/ch08/ch08.스택과큐.md
@@ -403,5 +403,49 @@ Deque 인터페이스에 있는 큐와 관련된 핵심 메서드는 addLast(3.1
 
 큐와 관련된 또 다른 유용한 메서드는 descendingIterator()와 iterator()이다. Deque은 Queue의 하위 인터페이스이다. 즉, Queue의 메서드 add(123), offer(123), remove(), poll(), element(), andpeek()는 각각 toaddLast(123), offerLast(), removeFirst(), pollFirst(), getFirst(), peekFirst()와 같다. 뒤의 메서드들은 이름이 Deque과 비슷한 방식으로 지어졌다. 따라서 뒤의 메서드를 좀 더 선호한다.
 
+## 문제 8.6 깊이 순서대로 이진 트리의 노드 구하기
+이진 트리는 9장에서 자세히 다른다. 이 문제를 풀기 위해서는 이진 트리의 성질을 약간 알아 둘 필요가 있다. 이진 트리의 각 노드에는 깊이가 존재하고, 이 깊이는 루트에서 해당 노드까지의 거리를 나타낸다.
 
+이진 트리가 주어졌을 때 같은 높이의 키값들을 배열로 반환하라. 키값은 노드의 깊이 순서대로 나타나야 하며, 높이가 같은 경우에는 왼쪽에서 오른쪽 순서대로 나타나야 한다.
 
+> 힌트: 큐를 두 개 사용해서 어떻게 풀지 먼저 생각해 보라.
+
+무식한 방법으로 먼저 생각해 보자. 노드와 그 깊이를 배열에 함께 기록하는 방법이 있다. 전위 순회(preorder traversal)는 노드의 왼쪽 자식을 먼저 순회하므로 높이가 같은 경우에는 언제나 왼쪽에서 오른쪽 순서대로 나열된다. 따라서 전위 순회를 사용하면 쉽게 기록할 수 있다. 이제 노드의 깊이를 키값으로 설정한 뒤 안정된 정렬(stable sort)을 수행하면 된다. 시간 복잡도는 정렬의 시간 복잡도에 따라 결정되므로 O(n log n)이고 노드의 깊이를 따로 기록해야 하므로 공간 복잡도는 O(n)이다.
+
+트리의 모든 노드는 어떤 방식으로든 순서가 이미 정해져 있으므로 정렬 알고리즘을 사용하지 않아도 된다. 이를 통해 시간 복잡도를 개선할 수 있다. 또한 깊이에 따라 노드를 처리한다면 모든 노드마다 해당 노드의 깊이를 기록할 필요가 없다.
+
+우리는 깊이가 i인 노드를 저장하는 큐와 깊이가 i + 1인 노드를 저장하는 큐를 사용할 것이다. 깊이가 i인 노드를 처리한 후에는 해당 큐를 비우고, 깊이가 i + 1인 큐를 처리하면서 깊이가 i + 2인 노드들을 새로운 큐에 담을 것이다.
+
+```java
+public static List<List<Integer>> binaryTreeDepthOrder (BinaryTreeNode<Integer> tree) {
+    List<List<Integer>> result = new ArrayList<>();
+    if (tree == null) {
+        return result;
+    }
+    
+    Queue<BinaryTreeNode<Integer>> currDepthNodes = new ArrayDeque<>();
+    currDepthNodes.add(tree);
+    while (!currDepthNodes.isEmpty()) {
+        Queue<BinaryTreeNode<Integer>> nextDepthNodes = new ArrayDeque<>();
+        List<Integer> thisLevel = new ArrayList<>();
+        while (!currDepthNodes.isEmpty()) {
+            BinaryTreeNode<Integer> curr = currDepthNodes.poll();
+            if (curr != null) {
+                thisLevel.add(curr.data);
+
+                if (curr.left != null) {
+                    nextDepthNodes.add(curr.left);
+                }
+                if (curr.right != null) {
+                    nextDepthNodes.add(curr.right);
+                }
+            }
+        }
+        result.add(thisLevel);
+        currDepthNodes = nextDepthNodes;
+    }
+    return result;
+}
+```
+
+각 노드는 정확히 한 번 삽입된 뒤 삭제되므로 시간 복잡도는 O(n)이다. 높이가 같은 노드의 개수 중 최댓값을 m이라 했을 때 공간 복잡도는 O(m)이 된다.
