--- a/java_epi/ch08/ch08.스택과큐.md
+++ b/java_epi/ch08/ch08.스택과큐.md
@@ -449,3 +449,53 @@ public static List<List<Integer>> binaryTreeDepthOrder (BinaryTreeNode<Integer> 
 ```
 
 각 노드는 정확히 한 번 삽입된 뒤 삭제되므로 시간 복잡도는 O(n)이다. 높이가 같은 노드의 개수 중 최댓값을 m이라 했을 때 공간 복잡도는 O(m)이 된다.
+
+## 문제 8.7 환형 큐 구현하기
+배열의 끝과 시작 지점이 붙어 있다고 가정해 보자. 즉, 배열의 마지막 지점 다음은 배열의 시작 지점이 된다. 이와 같은 구조를 가진 큐를 환형 큐(circular queue)라 한다. 환형 큐는 배열과 두 개의 변수로 구현할 수 있다. 변수 하나는 시작 인덱스를 다른 하나는 끝 인덱스를 가리키도록 한다. 환형 큐의 삽입과 삭제는 O(1) 시간에 수행된다. 만약 배열의 크기가 고정되어 있다면, 저장할 수 있는 원소의 최대 개수도 그에 맞게 정해진다. 만약 배열의 크기가 동적으로 변한다면 enqueue와 dequeue 연산을 m번 했을 때 걸리는 시간은 O(m)이 된다.
+
+배열을 사용하여 환형 큐 API를 구현하라. API의 생성자는 큐의 크기를 인자로 받는다. enqueue 및 dequeue 함수와 현재 원소의 개수를 반환하는 함수를 제공해야 한다. 크기를 동적으로 변경할 수 있도록 구현하여 많은 수의 원소를 저장할 수 있도록 하라.
+
+> 힌트: 헤드와 테일을 기록하라. 큐가 꽉 차 있을 때와 비어 있을 때를 어떻게 구분할 것인가?
+
+무식한 방법으로 먼저 생각해 보자. 배열의 헤드를 가리키는 변수는 언제나 0번 인덱스를 가리키도록 하고 또 다른 변수를 통해 테일 원소가 무엇인지 추적한다. enqueue는 O(1) 시간이 소요되지만 dequeue는 n개의 원소가 들어 있을 때 O(n)이 소요된다. 왜냐하면 원소를 빼낼 때마다 남아 있는 원소를 0번 인덱스에서 시작하도록 왼쪽으로 한 칸씩 시프트해야 하기 때문이다.
+
+이보다 나은 접근법은 헤드를 추적하는 변수를 하나 더 사용하는 것이다. 이 방법을 사용하면 dequeue 또한 O(1) 시간에 수행 가능하다. 배열이 꽉 차 있을 때 enqueue를 수행하면 배열의 크기를 늘려야 한다. 하지만 환형 큐의 원소들은 순서대로 등장하지 않으므로 단순히 배열의 크기를 늘린다고 끝날 일이 아니다. 예를 들어 배열에 <e,b,c,d>가 들어 있고 e가 테일, b가 헤드라고 가정해 보자. 이 배열의 크기를 늘리면 <e,b,c,d,_,_,_>가 되는데, 이 상태에서는 원소를 덮어쓰거나 옮기지 않는 이상 새로운 원소를 삽입할 수 없다.
+
+```java
+public static class Queue {
+    private int head = 0, tail = 0, numQueueElements = 0;
+    private static final int SCALE_FACTOR = 2;
+    private Integer[] entries;
+    
+    public Queue(int capacity) { entries = new Integer[capacity]; }
+    
+    public void enqueue(Integer x) {
+        if (numQueueElements == entries.length) { // 크기를 늘려야 한다.
+            // 큐의 원소가 순서대로 나오도록 조정한다.
+            Collections.rotate(Arrays.asList(entries), -head);
+            // head와 tail을 재설정한다.
+            head = 0;
+            tail = numQueueElements;
+            entries = Arrays.copyOf(entries, numQueueElements * SCALE_FACTOR);
+        }
+        entries[tail] = x;
+        tail = (tail + 1) % entries.length;
+        ++numQueueElements;
+    }
+
+    public Integer dequeue() {
+        if (numQueueElements != 0) {
+            --numQueueElements;
+            Integer ret = entries[head];
+            head = (head + 1) % entries.length;
+            return ret;
+        }
+        throw new NoSuchElementException("Dequeue called on an empty queue.");
+    }
+
+    public int size() { return numQueueElements; }
+
+}
+```
+
+dequeue의 시간 복잡도는 O(1)이고 enqueue의 분할 상환 시간 복잡도는 O(1)이다.
