--- a/java_epi/ch08/ch08.스택과큐.md
+++ b/java_epi/ch08/ch08.스택과큐.md
@@ -499,3 +499,42 @@ public static class Queue {
 ```
 
 dequeue의 시간 복잡도는 O(1)이고 enqueue의 분할 상환 시간 복잡도는 O(1)이다.
+
+## 문제 8.8 스택을 사용해서 큐 구현하기
+큐의 삽입과 삭제는 선입선출법(first-in, first-out)을 따른다. 그런데 스택의 삽입과 삭제는 후입선출법(last-in, first-out)을 따른다.
+
+스택 라이브러리를 이용해 큐를 구현하라.
+
+> 힌트: 스택을 하나만 사용해서 이 문제를 풀 수 있는가?
+
+스택 두 개를 사용하면 간단히 구현할 수 있다. 먼저, 스택에 원소를 쌓는 것으로 삽입을 구현한다. 삭제는 스택의 맨 아래 원소가 대상이므로, 스택의 모든 원소를 꺼내서 두 번째 스택에 쌓은 뒤, 두 번째 스택의 첫 번째 원소를 삭제한다. 왜냐하면, 첫 번째 스택의 맨 아래 원소가 두 번째 스택의 맨 위에 있기 때문이다. 그런 다음, 남은 원소들을 첫 번째 스택에 다시 넣는다.
+
+이 방법은 dequeue를 할 때마다 모든 원소를 두 번씩 스택에 넣었다가 빼야 한다는 문제가 있다. 따라서 n개의 원소가 들어 있을 때 dequeue의 시간 복잡도는 O(n)이 된다(enqueue는 O(1) 시간에 가능하다).
+
+dequeue의 시간 복잡도를 계선해 보자. dequeue 연산은 첫 번째 스택에서 두 번째 스택으로 원소를 모두 옮긴 후에 발생한다. 순서대로 원소를 삭제하면 되므로, 두 번째 스택이 비어 있는 상태가 되기 전까지는 작업이 간단하다. enqueue 연산 역시, 첫 번째 스택에 넣기만 하면 되므로 간단하다. 두 번째 스택이 비었을 때 dequeue 연산을 해야 한다면 첫 번째 스택의 원소를 두 번째 스택으로 옮기는 과정을 반복하면 된다. 여기서 핵심은 첫 번째 스택은 enqueue 연산을, 두 번째 스택은 dequeue 연산을 담당한다는 것이다.
+
+```java
+public static class Queue {
+    private Deque<Integer> enqueue = new ArrayDeque<>();
+    private Deque<Integer> dequeue = new ArrayDeque<>();
+
+    public void enqueue(Integer x) {enqueue.addFirst(x);}
+
+    public Integer dequeue() {
+        if (dequeue.isEmpty()) {
+            // enqueue에서 dequeue로 원소를 옮긴다.
+            while (!enqueue.isEmpty()) {
+                dequeue.addFirst(enqueue.removeFirst());
+            }
+        }
+
+        if (!dequeue.isEmpty()) {
+            return dequeue.removeFirst();
+        }
+        throw new NoSuchElementException("Cannot pop empty queue");
+    }
+}
+```
+
+처음 제안한 방법은 dequeue 연산을 할 때마다 모든 원소를 두 번씩 넣었다가 다시 빼내야 했다. 하지만 지금은 매번 모든 원소를 이동시킬 이유가 사라졌고 필요한 연산의 개수만큼만 시간이 소요된다. 따라서 m개의 연산이 있을 때 이 방법은 O(m)의 시간이 걸린다.
+
