--- a/java_epi/ch08/ch08.스택과큐.md
+++ b/java_epi/ch08/ch08.스택과큐.md
@@ -538,3 +538,86 @@ public static class Queue {
 
 처음 제안한 방법은 dequeue 연산을 할 때마다 모든 원소를 두 번씩 넣었다가 다시 빼내야 했다. 하지만 지금은 매번 모든 원소를 이동시킬 이유가 사라졌고 필요한 연산의 개수만큼만 시간이 소요된다. 따라서 m개의 연산이 있을 때 이 방법은 O(m)의 시간이 걸린다.
 
+## 문제 8.9 최댓값 API로 큐 구현하기
+enqueue, dequeue, max 연산을 제공하는 큐를 구현하라. max 연산은 큐에 저장된 원소 중 최댓값을 반환하는 연산이다.
+
+> 힌트: 어떤 연산을 하더라도 절대 최댓값이 될 수 없는 원소는 무엇인가?
+
+무식한 방법은 최댓값을 계속 갱신하는 것이다. 즉, enqueue나 dequeue를 할 때마다 최댓값이 무엇인지 매번 구한다. enqueue를 할 때 최댓값을 갱신하는 건 간단하고 빠르다. 단순히 새로 입력된 값과 현재 최댓값을 비교하면 된다. 하지만 dequeue에서의 최댓값을 갱신하는 작업은 느리다. 남아 있는 모든 원소와 비교해야 하므로 큐의 크기가 n일 때 O(n)의 시간이 소요된다.
+
+현재 큐에 s라는 원소가 들어 있는데, 이보다 큰 원소 b가 삽입되는 경우를 생각해 보자. s는 b보다 먼저 삭제될 것이다. 그러므로 나중에 삽입이나 삭제 연산이 수행되더라도 s는 큐에서 최대 원소값으로 반환될 수 없다.
+
+큐에서 최댓값을 빠르게 구하는 방법의 핵심은 앞에서 설명한 s와 같은 원소들을 고려 대상에서 제거하는 것이다. 이렇게 하려면 지금까지 입력된 값보다 더 큰 값이 뒤에 삽입되지 않도록 별도의 덱을 두어 관리해야 한다. 덱에 저장된 원소들은 큐에 삽입된 순서로 저장된다. 즉, 큐의 헤드와 가까운 원소가 먼저 등장한다. 덱의 모든 원소는 그 다음 원소보다 크거나 같으므로 큐에서 가장 큰 원소는 덱의 헤드가 된다.
+
+큐를 갱신할 때 덱은 어떻게 갱신할 것인지 생각해 볼 차례다. 큐에서 원소를 삭제할 때 해당 원소가 덱의 헤드와 같다면 덱에서 헤드를 삭제한다. 그렇지 않다면 덱을 그대로 둔다. 큐에 원소를 삽입할 때 덱의 테일이 해당 원소보다 크거나 같아질 때까지 테일의 원소를 빼내고, 해당 원소를 덱의 테일에 삽입한다.
+
+```java
+public static class QueueWithMax<T extends Comparable<T>> {
+    private Queue<T> entries = new ArrayDeque<>();
+    private Deque<T> candidatesForMax = new ArrayDeque<>();
+
+    public void enqueue(T x) {
+        entries.add(x);
+        while (!candidatesForMax.isEmpty() && candidatesForMax.peekLast().compareTo(x) < 0) {
+            candidatesForMax.removeLast();
+        }
+        candidatesForMax.addLast(x);
+    }
+
+    public T dequeue() {
+        if (!entries.isEmpty()) {
+            T result = entries.remove();
+            if (result.equals(candidatesForMax.peekFirst())) {
+                candidatesForMax.removeFirst();
+            }
+            return result;
+        }
+        throw new NoSuchElementException("Called dequeue() on empty queue");
+    }
+
+    public T max() {
+        if (!candidatesForMax.isEmpty()) {
+            return candidatesForMax.peekFirst();
+        }
+        throw new NoSuchElementException("emtpy queue");
+    }
+}
+```
+
+dequeue 연산의 시간 복잡도는 O(1)이다. enqueue를 한 번 수행할 때 덱에서 원소를 여러 번 삭제해야 할 수도 있다. 하지만 n개의 enqueue, dequeue 연산을 수행했을 때 분할 상환 시간 복잡도는 O(n)이다. 왜냐하면 각 원소가 덱에 삽입되고 덱에서 삭제되는 횟수가 최대 한 번이기 때문이다. max 연산은 단순히 덱의 헤드 원소를 반환하기만 하면 되므로 O(1) 시간이 소요된다.
+
+이 문제를 다른 문제로 변형해서 풀 수도 있다. 문제 8.1의 해법에서 이미 스택에서 최댓값을 어떻게 효율적으로 찾는지 다루었다. 또한 문제 8.8의 해법에서 스택 두 개를 사용해서 큐를 효율적으로 모델링하는 방법도 배웠다. 따라서 최댓값을 찾는 스택 두 개를 사용해서 큐를 모델링하면 큐에서 최댓값을 찾는 문제를 풀 수 있다. 다음 예시 코드는 아무런 문제 없이 잘 동작한다. 하지만 앞에서 설명한 방법과 비교하면 그다지 직관적이지 않다.
+
+```java
+public class QueueWithMax {
+    private StackWithMax.Stack enqueue = new StackWithMax.Stack();
+    private StackWithMax.Stack dequeue = new StackWithMax.Stack();
+
+    public void enqueue(Integer x) { enqueue.push(x); }
+
+    public Integer dequeue() {
+        if (dequeue.empty()) {
+            while (!enqueue.empty()) {
+                dequeue.push(enqueue.pop());
+            }
+        }
+        if (!dequeue.empty()) {
+            return dequeue.pop();
+        }
+        throw new NoSuchElementException("Cannnot get dequeue() on empty queue.");
+    }
+
+    public Integer max() {
+        if (!enqueue.empty()) {
+            return dequeue.empty() ? enqueue.max() : Math.max(enqueue.max(), dequeue.max());
+        }
+        if (!dequeue.empty()) {
+            return dequeue.max();
+        }
+        throw new NoSuchElementException("Cannot get max() on empty queue.");
+    }
+}
+```
+
+최댓값을 구하는 스택의 분할 상환 시간 복잡도는 push, pop, max에 대해서 모두 O(1)이다. 또한 두 개의 스택을 이용해서 큐를 구현한 방법도 enqueue, dequeue 연산에 대한 분할 상환 시간 복잡도는 O(1)이다. 따라서 이 둘을 합친 방법도 enqueue, dequeue, max 연산에 대한 분할 상환 시간 복잡도는 O(1)이 된다.
+
