add java epi 9.1

--- a/java_epi/ch09/ch09.이진트리.md
+++ b/java_epi/ch09/ch09.이진트리.md
@@ -60,3 +60,56 @@ public static void treeTraversal(BinaryTreeNode<Integer> root) {
 - 노드에 `부모를 가리키는 변수`가 있다면, 코드를 좀 더 깔끔하게 작성할 수 있고 시간 및 공간 복잡도도 줄일 수 있다.[문제 9.10]
 - `하나 있는 자식`이 단말 노드인 경우, `실수`하기 쉬우므로 유의한다.[문제 9.6]
 
+## 문제 9.1 이진 트리의 높이가 균형 잡혀 있는지 확인하기
+트리의 모든 노드에 대해서 왼쪽 부분 트리의 높이와 오른쪽 부분 트리의 높이의 차이가 최대 1이라면 해당 트리는 균형 잡혔다고 한다. 균형 잡힌 트리는 포화 이진 트리이거나 완전 이진 트리일 필요는 없다.
+
+![balanced binary tree](http://algorithms.tutorialhorizon.com/files/2014/09/BalancedTree-Example.png)
+
+이진 트리의 루트 노드가 입력으로 주어졌을 때 해당 트리가 균형 잡혀 있는지 확인하는 프로그램을 작성하라.
+
+> 고전적인 이진 트리 알고리즘을 생각해 보라.
+
+무식한 방법은 다음과 같다. 재귀적으로 각 노드를 루트로 한 부분 트리의 높이를 계산한다. 단말 노드에서 시작해 위로 올라가면서 높이를 구하는 것이다. 각 노드에서 왼쪽 자식과 오른쪽 자식의 높이의 차이가 1 이상인지 확인한다. 각 높이를 해시 테이블에 저장하거나 노드 안에 새로운 변수를 추가해서 높이 정보를 저장할 수 있다. 이 방법은 노드가 n개일 때 $O(n)$의 시간 및 공간 복잡도를 사용한다.
+
+하지만 모든 노드의 높이를 전부 저장할 필요는 없다. 부분 트리를 모두 처리한 뒤에는 해당 트리가 균형 잡혀 있는지, 해당 트리의 높이가 무엇인지만 알면 되므로 공간 복잡도를 더 줄일 수 있다. 또한 부분 트리의 자손에 대한 정보는 필요 없다.
+
+```java
+private static class BalanceStatusWithHeight {
+    public boolean balanced;
+    public int height;
+
+    public BalanceStatusWithHeight(boolean balanced, int height) {
+        this.balanced = balanced;
+        this.height = height;
+    }
+}
+
+public static boolean isBalanced(BinaryTreeNode<Integer> tree) {
+    return checkBalanced(tree).balanced;
+}
+
+private static BalanceStatusWithHeight checkBalanced(
+    BinaryTreeNode<Integer> tree
+) {
+    if (tree == null) {
+        return new BalanceStatusWithHeight(true, -1);
+    }
+
+    BalanceStatusWithHeight leftResult = checkBalanced(tree.left);
+    if (!leftResult.balanced) {
+        return leftResult; // 왼쪽 부분 트리가 균형 잡히지 않았다.
+    }
+
+    BalanceStatusWithHeight rightResult = checkBalanced(tree.right);
+    if (!rightResult.balanced) {
+        return rightResult; // 오른쪽 부분 트리가 균형 잡히지 않았다.
+    }
+
+    boolean isBalanced = Math.abs(leftResult.height - rightResult.height) <= 1;
+    int height = Math.max(leftResult.height, rightResult.height) + 1;
+    return new BalanceStatusWithHeight(isBalanced, height);
+}
+```
+
+해당 프로그램은 후위 순회로 구현되어 있고, 일찍 끝마치는 로직 때문에 모든 경우를 호출하지 않을 수 있다. 즉, 만약 왼쪽 부분 트리가 균형 잡혀 있지 않다면 오른쪽 부분 트리를 방문할 필요가 없다. 함수 호출 스택의 호출 시퀀스는 루트에서 현재 노드까지의 유일한 경로와 같고, 따라서 스택의 높이의 상한은 트리의 높이가 되므로 공간 복잡도는 $O(h)$가 된다. 시간 복잡도는 후위 순회와 같으므로 $O(n)$이 된다.
+
