add java epi 9.2

--- a/java_epi/ch09/ch09.이진트리.md
+++ b/java_epi/ch09/ch09.이진트리.md
@@ -34,6 +34,7 @@ public static class BinaryTreeNode<T> {
 트리의 종류가 다양하다. 그중에서 자주 사용되는 트리는 18장에서 간략히 설명한다.
 
 ## 이진 트리 부트캠프
+
 이진 트리를 빠르게 이해하려면 기본적인 세 가지 순회방법(중위, 전위, 후위 순회)를 직접 구현해 보는 것이 좋다.
 
 ```java
@@ -54,6 +55,7 @@ public static void treeTraversal(BinaryTreeNode<Integer> root) {
 노드가 n개일 때, 각 방법의 시간 복잡도는 O(n)이다. 명시적으로 메모리를 할당하지 않더라도 함수 호출 스택의 최대 깊이는 트리의 높이인 h에 근접하게 된다. 따라서 공간 복잡도는 O(h)가 된다. h의 하한값은 log n(완전 이진 트리)이고 상한 값은 n(한쪽으로 치우친 트리)이다.
 
 ## 이진 트리 문제를 풀기 전 꼭 알고 있어야 할 내용
+
 - `재귀 알고리즘`은 트리에 적합하다. `함수 호출 스택`에 암묵적으로 할당된 공간은 공간 복잡도를 분석할 때 포함시켜야 한다.[문제 9.1]
 - 어떤 트리 문제는 O(n) 공간을 사용한 쉬운 해법이 존재하지만 `주어진 트리의 노드`를 사용해서 공간 복잡도를 O(1)로 줄이는 까다로운 해법도 존재한다.[문제 9.14]
 - 복잡도를 분석할 때 `왼쪽 혹은 오른쪽으로 치우친 트리`를 고려해 보라. 트리의 높이가 h일 때 O(h) 복잡도는 균형 잡힌 트리에서 O(log n)이지만 치우친 트리에서 O(n)이 된다. [문제 9.12]
@@ -61,6 +63,7 @@ public static void treeTraversal(BinaryTreeNode<Integer> root) {
 - `하나 있는 자식`이 단말 노드인 경우, `실수`하기 쉬우므로 유의한다.[문제 9.6]
 
 ## 문제 9.1 이진 트리의 높이가 균형 잡혀 있는지 확인하기
+
 트리의 모든 노드에 대해서 왼쪽 부분 트리의 높이와 오른쪽 부분 트리의 높이의 차이가 최대 1이라면 해당 트리는 균형 잡혔다고 한다. 균형 잡힌 트리는 포화 이진 트리이거나 완전 이진 트리일 필요는 없다.
 
 ![balanced binary tree](http://algorithms.tutorialhorizon.com/files/2014/09/BalancedTree-Example.png)
@@ -112,4 +115,34 @@ private static BalanceStatusWithHeight checkBalanced(
 ```
 
 해당 프로그램은 후위 순회로 구현되어 있고, 일찍 끝마치는 로직 때문에 모든 경우를 호출하지 않을 수 있다. 즉, 만약 왼쪽 부분 트리가 균형 잡혀 있지 않다면 오른쪽 부분 트리를 방문할 필요가 없다. 함수 호출 스택의 호출 시퀀스는 루트에서 현재 노드까지의 유일한 경로와 같고, 따라서 스택의 높이의 상한은 트리의 높이가 되므로 공간 복잡도는 $O(h)$가 된다. 시간 복잡도는 후위 순회와 같으므로 $O(n)$이 된다.
+
+## 문제 9.2 이진 트리가 대칭인지 확인하기
+
+루트에 수직선을 그었을 때 왼쪽 부분 트리가 오른쪽 부분 트리를 거울에 비친 모습과 같다면 해당 이진 트리가 대칭이라고 말한다. 이진 트리가 대칭인지 확인하는 프로그램을 작성하라.
+
+> 힌트: 대칭의 정의는 재귀적이다.
+
+거울에 비친 트리를 계산한 뒤 기존 트리와 정확히 일치하는지 확인하면 된다. 거울에 비친 트리를 계산하는 간단한 방법은 왼쪽 부분 트리와 오른쪽 부분 트리를 재귀적으로 맞바꾸는 것이다. 노드가 n개일 떄 시간 및 공간 복잡도는 $O(n)$이 된다.
+
+더 나은 알고리즘에서는 거울에 비친 트리를 만들지 않는다. 여기서는 부분 트리의 쌍이 서로 동일한지 아닌지만 판단하면 된다. 따라서 각 쌍이 동일하지 않는다는 사실을 확인하는 순간, 바로 false를 반환해서 코드 진행을 멈추면 된다.
+
+```java
+public static boolean isSymmetric(BinaryTreeNode<Integer> tree) {
+    return tree == null || checkSymmetric(tree.left, tree.right);
+}
+
+private static boolean checkSymmetric(BinaryTreeNode<Integer> subtree0, BinaryTreeNode<Integer> subtree1) {
+    if (subtree0 == null && subtree1 == null) {
+        return true;
+    } else if (subtree0 != null && subtree1 != null) {
+        return subtree0.data == subtree1.data
+            && checkSymmetric(subtree0.left, subtree1.right)
+            && checkSymmetric(subtree0.right, subtree1.left);
+    }
+    // 부분 트리가 한쪽에만 존재하는 경우
+    return false;
+}
+```
+
+시간 복잡도는 $O(n)$이고, 공간 복잡도는 $O(h)$이다. 여기서 n은 노드의 개수이고 h는 트리의 높이다.
 
