add java epi 9.3

--- a/java_epi/ch09/ch09.이진트리.md
+++ b/java_epi/ch09/ch09.이진트리.md
@@ -146,3 +146,66 @@ private static boolean checkSymmetric(BinaryTreeNode<Integer> subtree0, BinaryTr
 
 시간 복잡도는 $O(n)$이고, 공간 복잡도는 $O(h)$이다. 여기서 n은 노드의 개수이고 h는 트리의 높이다.
 
+## 문제 9.3 이진 트리의 최소 공통 조상 구하기
+
+이진 트리에서 임의의 두 노드는 루트라는 공통 조상을 가지고 있다. 이진 트리에서 임의의 두 노드의 최소 공통 조상(LCA)은 공통 조상 노드 중에서 루트에서 가장 먼 노드를 뜻한다.
+
+최소 공통 조상을 구하는 건 중요한 작업이다. 예를 들어 웹 페이지를 렌더링할 때, 특히 특정 문서 객체 모델(DOM)에 적용할 캐스케이딩 스타일 시트(CSS)를 계산할 때 유용하다.
+
+이진 트리에서 두 노드의 최소 공통 조상을 구하는 알고리즘을 설계하라. 단, 노드에 부모를 가리키는 변수는 존재하지 않는다.
+
+> 힌트: 루트가 최소 공통 조상이 되는 때는 언제인가?
+
+무식한 방법은 일단 두 노드가 루트의 다른 부분 트리에 속해 있거나 두 노드 중 하나가 루트인지 확인하는 것이다. 이 경우에는 루트가 최소 공통 조상이 된다. 만약 두 노드가 루트의 왼쪽 부분 트리 혹은 루트의 오른쪽 부분 트리에 속해 있다면 해당 부분 트리를 재귀 호출한다. 노드가 n개일 때 시간 복잡도는 $O(n^2)$이 된다. 최악의 경우는 한쪽으로 치우친 트리에서 두 노드가 트리의 가장 아래에 있을 때이다.
+
+그런데 이 알고리즘은 여러 번 수행할 필요는 없다. 즉, 시간 복잡도를 개선할 수 있다. 두 노드가 같은 부분 트리에 있다면 두 노드가 부분 트리에 속해 있는지 불 값을 반환하지 않고 곧바로 최소 공통 조상을 구하면 된다. 다음 프로그램은 두 가지 정보를 담은 객체를 반환한다. 하나는 부분 트리에 존재하는 두 노드의 개수(0 혹은 1, 혹은 2)이고, 다른 하나는 두 노드가 해당 부분 트리에 있을 경우에 두 노드의 최소 공통 조상이다.
+
+```java
+private static class Status {
+    public int numTargetNodes;
+    public BinaryTreeNode<Integer> ancestor;
+
+    public Status(int numTargetNodes, BinaryTreeNode<Integer> node) {
+        this.numTargetNodes = numTargetNodes;
+        this.ancestor = node;
+    }
+}
+
+public static BinaryTreeNode<Integer> LCA(BinaryTreeNode<Integer> tree,
+                                          BinaryTreeNode<Integer> node0,
+                                          BinaryTreeNode<Integer> node1)
+{
+    return LCAHelper(tree, node0, node1).ancestor;
+}
+
+// 정수값과 노드로 구성된 객체를 반환한다. 정수형 변수는 {node0, node1}이
+// 해당 트리에 몇 개 존재하는지에 따라 0, 1, 2의 값을 가진다.
+// 만약 두 노드가 해당 트리에 존재하고, ancestor에 null이 아닌 값이 할당되어 있으면
+// 해당 노드가 최소 공통 조상이다.
+private static Status LCAHelper(BinaryTreeNode<Integer> tree,
+                                BinaryTreeNode<Integer> node0,
+                                BinaryTreeNode<Integer> node1)
+{
+    if (tree == null) {
+        return new Status(0, null);
+    }
+
+    Status leftResult = LCAHelper(tree.left, node0, node1);
+    if (leftResult.numTargetNodes == 2) {
+        // 왼쪽 부분 트리에서 두 노드를 발견했다.
+        return leftResult;
+    }
+
+    Status rightResult = LCAHelper(tree.right, node0, node1);
+    if (rightResult.numTargetNodes == 2) {
+        // 왼쪽 부분 트리에서 두 노드를 발견했다.
+        return rightResult;
+    }
+
+    int numTargetNodes = leftResult.numTargetNodes + rightResult.numTargetNodes + (tree == node0 ? 1 : 0) + (tree == node1 ? 1 : 0)
+    return new Status(numTargetNodes, numTargetNodes == 2 ? tree : null);
+}
+```
+
+알고리즘은 구조적으로 후위 순회를 재귀적으로 구현한 방법과 비슷하고, 복잡도도 동일하다. 즉, 시간 복잡도는 $O(n)$, 공간 복잡도는 $O(h)$이다. 여기서 h는 트리의 높이다.
+
