--- a/java_epi/ch09/ch09.이진트리.md
+++ b/java_epi/ch09/ch09.이진트리.md
@@ -209,3 +209,54 @@ private static Status LCAHelper(BinaryTreeNode<Integer> tree,
 
 알고리즘은 구조적으로 후위 순회를 재귀적으로 구현한 방법과 비슷하고, 복잡도도 동일하다. 즉, 시간 복잡도는 $O(n)$, 공간 복잡도는 $O(h)$이다. 여기서 h는 트리의 높이다.
 
+## 문제 9.4 노드에 부모를 가리키는 정보가 있을 때 최소 공통 조상 구하기
+
+이진 트리에서 노드 두 개가 주어졌을 때 최소 공통 조상(LCA)을 구하는 알고리즘을 설계하라. 각 노드에는 부모를 가리키는 정보가 들어 있다.
+
+> 힌트: 두 노드가 루트에서 같은 거리에 있다면 문제가 쉬워진다.
+
+무식한 방법은 루트까지의 탐색 경로에 있는 모든 노드를 해시 테이블에 저장하는 것이다. 부모를 가리키는 정보가 노드에 있기 때문에 탐색 경로를 쉽게 구할 수 있다. 그 다음 두 번째 노드에서부터 위로 올라가면서 해시 테이블에 같은 노드가 있는지 확인한다. 이 방법의 시간 및 공간 복잡도는 $O(h)$이다. 여기서 h는 트리의 높이다.
+
+두 노드 사이에 루트라는 공통 조상이 존재한다는 사실을 우리는 알고 있다. 만약 두 노드의 깊이가 같다면 같은 노드에 도달할 떄까지 동시에 한 칸씩 올라가면서 확인하면 된다. 하지만 두 노드의 깊이가 같지 않을 때는 첫 공통 노드가 무엇인지 알아내야 한다. 그러려면 순회한 노드의 집합을 알고 있어야 한다. 실제로 노드를 저장하는 것은 아니고, 깊이가 더 깊은 노드를 다른 노드의 깊이와 같아질 때까지 끌어올린 뒤에 두 노드를 동시에 한 칸씩 올라가는 우회 방법을 쓰면 된다.
+
+예를 들어 트리 예에서 노드 M의 높이는 5, 탐색 경로는 <A, I, J, K, L, M>이고, 노드 P의 높이는 3, 탐색 경로는 <A, I, O, P>이다. 노드 M을 K까지 올려 깊이를 3으로 만든 뒤에 두 노드를 한 칸씩 올라간다면 첫 공통 노드는 I가 된다. 따라서 노드 I가 M과 P의 공통 조상이다.
+
+부모 정보를 알고 있으므로 노드의 깊이를 구하는 방법은 간단해진다. 시간 복잡도는 %O(h)%이고, 공간 복잡도는 $O(1)$이다. 깊이를 알고 있다면 동시에 움직이면서 최소 공통 조상을 구할 수 있다. 여기서 h는 트리의 높이이다.
+
+```java
+public static BinaryTree<Integer> LCA(BinaryTree<Integer> node0, BinaryTree<Integer> node1) {
+    int depth0 = getDepth(node0), depth1 = getDepth(node1);
+    
+    // 코드를 간단히 하기 위해서 node0을 항상 깊이가 같은 노드로 만든다.
+    if (depth1 > depth0) {
+        BinaryTree<Integer> temp = node0;
+        node0 = node1
+        node1 = temp;
+    }
+
+    // 깊이가 깊은 노드를 먼저 올린다.
+    int depthDiff = Math.abs(depth0 - depth1);
+    while (depthDiff-- > 0) {
+        node0 = node0.parent;
+    }
+
+    // 최소 공통 조상에 도달할 때까지 두 노드를 동시에 올린다.
+    while (node0 != node1) {
+        node0 = node0.parent;
+        node1 = node1.parent;
+    }
+    return node0;
+}
+
+private static int getDepth(BinaryTree<Integer> node) {
+    int depth = 0;
+    while (node.parent != null) {
+        ++depth;
+        node = node.parent;
+    }
+    return depth;
+}
+```
+
+시간 복잡도는 $O(h)$이고 공간 복잡도는 $O(1)$이다. 이 복잡도는 깊이를 계산하는 복잡도와 동일하다.
+
