--- a/java_epi/ch09/ch09.이진트리.md
+++ b/java_epi/ch09/ch09.이진트리.md
@@ -260,3 +260,39 @@ private static int getDepth(BinaryTree<Integer> node) {
 
 시간 복잡도는 $O(h)$이고 공간 복잡도는 $O(1)$이다. 이 복잡도는 깊이를 계산하는 복잡도와 동일하다.
 
+## 문제 9.5 이진 트리에서 루트-단말 노드 경로의 합 구하기
+
+각 노드가 0 혹은 1 값만 가지는 이진 트리를 생각해 보자. 루트-단말 노드 경로는 이진수로 표현될 수 있다. 여기서 최상위 비트(MSB)는 루트가 된다.
+
+루트-단말 노드의 경로로 표현되는 이진 숫자의 합을 구하는 알고리즘을 설계하라.
+
+> 힌트: 트리를 어떻게 순회해야 하는지 생각해 보라.
+
+무식한 방법은 다음과 같다. 중위 순회를 통해 단말 노드를 구한 뒤, 자식-부모 관계를 해시 테이블에 저장한다. 그다음 자식-부모 매핑을 사용해서 모든 단말 노드에서 루트까지 순회한다. 각각의 단말 노드-루트 경로는 이진수로 표현될 것이고 단말 노드의 비트는 최하위 비트(LSB)가 된다. 이들의 합을 모두 구하면 된다. 루트-단말 노드 경로의 개수가 L(단말 노드의 개수와 같다), 트리의 높이가 h일 때 이 방법의 시간 복잡도는 $O(Lh)$가 된다. 모든 노드의 개수를 n이라 할 때 공간 복잡도는 해시 테이블의 크기만큼이므로 $O(n)$이 된다.
+
+복잡도를 어떻게 개선할 수 있을까? 우선 경로상의 노드들이 중복되며, 이들을 반복적으로 계산할 필요가 없다는 사실을 이용해 보자. 루트에서 임의의 노드까지의 경로가 표현하는 숫자를 계산하기 위해서는 부모까지 표현된 숫자를 두 배한 뒤 현재 노드의 비트를 더해 주면 된다. 예를 들어 (책의 그림) A에서 L까지의 경로가 표현하는 숫자는 $2 * (1100)_2 + 1 = (11001)_2$가 된다.
+
+따라서 다음 방법으로 루트에서 단말 노드까지의 모든 경로의 합을 구할 수 있다. 노드를 방문할 때마다 부모까지의 숫자를 이용해서 현재의 숫자를 계산한다. 만약 노드가 단말 노드라면 해당 정수값을 반환한다. 만약 단말 노드가 아니라면, 왼쪽 자식과 오른쪽 자식까지의 합을 반환한다.
+
+```java
+public static int sumRootToLeaf(BinaryTreeNode<Integer> tree) {
+    return sumRootToLeafHelper(tree, 0);
+}
+
+private static int sumRootToLeafHelper(BinaryTreeNode<Integer> tree, int partialPathSum) {
+    if (tree == null) {
+        return 0;
+    }
+
+    partialPathSum = partialPathSum * 2 + tree.data;
+    if (tree.left == null && tree.right == null) { // 단말 노드라면
+        return partialPathSum;
+    }
+    // 단말 노드가 아닌 경우
+    return sumRootToLeafHelper(tree.left, partialPathSum) + sumRootToLeafHelper(tree.right, partialPathSum);
+}
+```
+
+시간 복잡도는 $O(n)$, 공간 복잡도는$O(h)$이다.
+
+
