--- a/java_epi/ch09/ch09.이진트리.md
+++ b/java_epi/ch09/ch09.이진트리.md
@@ -295,4 +295,37 @@ private static int sumRootToLeafHelper(BinaryTreeNode<Integer> tree, int partial
 
 시간 복잡도는 $O(n)$, 공간 복잡도는$O(h)$이다.
 
+## 문제 9.6 주어진 합에 해당하는 루트-단말 노드 경로 구하기
+
+각 노드가 정수값으로 표현된 이진 트리가 주어져 있다. 이러한 트리에서 어떤 노드의 경로 무게는 루트에서 해당 노드까지의 유일한 경로상에 있는 노드들의 정수의 합이다. 예를 들어 위 그림에서 E의 경로 무게는 591(314 + 6 + 271)이다.
+
+어떤 정수값과 노드의 무게가 표현된 이진 트리가 주어졌을 때, 단말 노드까지의 경로 무게가 주어진 정수값과 같은 단말 노드가 존재하는지 확인하는 프로그램을 작성하라.
+
+> 힌트: 특정 부분 트리를 확인하려면 나머지 트리에서 어떤 정보가 필요한가?
+
+우선 무식한 방법을 생각해보자. 9.5의 해법에서 다루었던 무식한 방법을 이용하면 된다. 시간 복잡도 또한 $O(Lh)$로 동일하다. 여기서 L은 루트-단말 노드 경로의 개수(단말 노드의 개수와 같다)이고 h는 트리의 높이다. 모든 노드의 개수를 n이라 할 때 공간 복잡도는 해시 테이블의 크기만큼이므로 $O(n)$이 된다.
+
+이 방법은 경로가 겹치고, 겹친 경로에서 구한 합의 정보를 공유하지 않아 비효율적이다.
+
+트리를 순회하면서 루트-단말 노드 경로의 합을 미리 구해 놓는 방법이 더 낫다. 단말 노드까지의 경로 무게가 찾고자 하는 무게와 같은 단말 노드에 도달하면, 원하는 단말 노드를 찾은 것이다. 해당 단말 노드를 찾는 순간 순회를 마침으로써 단말 노드를 찾는 작업을 중단하도록 한다.
+
+```java
+public static boolean hasPathSum(BinaryTreeNode<Integer> tree, int targetSum) {
+    return hasPathSumHelper(tree, 0, targetSum);
+}
+
+private static boolean hasPathSumHelper(BinaryTreeNode<Integer> node, int partialPathSum, int targetSum) {
+    if (node == null) {
+        return false;
+    }
+    partialPathSum += node.data;
+    if (node.left == null && node.right == null) {
+        return partialPathSum == targetSum;
+    }
+    return hasPathSumHelper(tree.left, partialPathSum, targetSum) ||
+           hasPathSumHelper(tree.right, partialPathSum, targetSum);
+}
+```
+
+시간 복잡도는 $O(n)$, 공간 복잡도는 $O(h)$이다.
 
