add java epi 9.7

--- a/java_epi/ch09/ch09.이진트리.md
+++ b/java_epi/ch09/ch09.이진트리.md
@@ -329,3 +329,38 @@ private static boolean hasPathSumHelper(BinaryTreeNode<Integer> node, int partia
 
 시간 복잡도는 $O(n)$, 공간 복잡도는 $O(h)$이다.
 
+## 문제 9.7 재귀를 사용하지 않고 중위 순회 구현하기
+
+이번 문제는 이진 트리를 중위 순회한다. 이 장의 첫 부분에서 순회에 관한 자세한 내용과 예제를 다뤘다. 일반적으로 재귀를 사용하면 트리를 순회하는 구현은 쉬워진다.
+
+이진 트리가 입력으로 주어졌을 때 트리를 중위 순회하는 프로그램을 작성하라. 재귀를 사용하면 안 된다. 노드에는 부모를 가리키는 정보가 포함되어 있지 않다.
+
+> 함수 호출 스택을 시뮬레이션 해보라.
+
+재귀 해법은 간단하다. 왼쪽 부분 트리를 순회한 뒤 루트를 방문하고 오른쪽 부분 트리를 순회하면 된다. 이 알고리즘은 명시적으로 스택을 사용함으로써 순환적 알고리즘으로 바꿀 수 있다. 구현 방법은 여러 가지가 될 수 있는데, 다음 코드가 그 중 하나다. 여기서 주목할 만한 점은 현재 노드는 스택에 집어 넣지만 오른쪽 자식은 스택에 넣지 않는다는 것이다. 또한 해당 노드를 방문했다는 정보를 따로 표기하지 않는다.
+
+```java
+public static List<Integer> BSTInSortedOrder(BSTNode<Integer> tree) {
+    Deque<BSTNode<Integer>> s = new LinkedList<>();
+    BSTNode<Integer> curr = tree;
+    List<Integer> result = new ArrayList<>();
+
+    while (!s.isEmpty() || curr != null) {
+        if (curr != null) {
+            s.addFirst(curr);
+            // 왼쪽으로 간다.
+            curr = curr.left;
+        } else {
+            // 위로 간다.
+            curr = s.removeFirst();
+            result.add(curr.data);
+            // 오른쪽으로 간다.
+            curr = curr.right;
+        }
+    }
+    return result;
+}
+```
+
+각 노드에서 사용한 시간은 $O(1)$이므로 전체 시간 복잡도는 $O(n)$이 된다. 트리의 높이가 h일 때 공간 복잡도는 $O(h)$가 된다. 공간은 동적으로 할당되고, 그 크기는 재귀로 구현했을 때의 함수 호출 스택의 최대 깊이와 같다.
+
