--- a/java_epi/ch09/ch09.이진트리.md
+++ b/java_epi/ch09/ch09.이진트리.md
@@ -364,3 +364,26 @@ public static List<Integer> BSTInSortedOrder(BSTNode<Integer> tree) {
 
 각 노드에서 사용한 시간은 $O(1)$이므로 전체 시간 복잡도는 $O(n)$이 된다. 트리의 높이가 h일 때 공간 복잡도는 $O(h)$가 된다. 공간은 동적으로 할당되고, 그 크기는 재귀로 구현했을 때의 함수 호출 스택의 최대 깊이와 같다.
 
+## 문제 9.8 재귀를 사용하지 않고 전위 순회 구현하기
+
+이진 트리가 주어졌을 때 트리를 전위 순회하는 프로그램을 작성하라. 재귀를 사용하면 안 된다. 노드에는 부모 노드를 가리키는 정보가 포함되어 있지 않다.
+
+전위 순회는 각 노드를 후입선출법으로 방문한다. 따라서 후입선출 방식인 스택을 사용하는 것이 좋다. 처음 스택에는 루트 노드만 들어 있다. 노드를 방문할 때마다 스택에서 노드를 하나 빼고 오른쪽 노드를 넣은 뒤 왼쪽 노드를 넣는다(왼쪽 자식을 먼저 순회해야 하므로 스택에는 오른쪽 자식을 먼저 넣고 그 다음에 왼쪽 자식을 넣는다).
+
+```java
+public static List<Integer> preorderTraversal(BinaryTreeNode<Integer> tree) {
+    Deque<BinaryTreeNode<Integer>> path = new LinkedList<>();
+    path.addFirst(tree);
+    List<Integer> result = new ArrayList<>();
+    while (!path.isEmpty()) {
+        BinaryTreeNode<Integer> curr = path.removeFirst();
+        if (curr != null) {
+            result.add(curr.data);
+            path.addFirst(curr.right);
+            path.addFirst(curr.left);
+        }
+    }
+    return result;
+}
+```
+
