--- a/java_epi/ch09/ch09.이진트리.md
+++ b/java_epi/ch09/ch09.이진트리.md
@@ -387,3 +387,36 @@ public static List<Integer> preorderTraversal(BinaryTreeNode<Integer> tree) {
 }
 ```
 
+## 문제 9.9 중위 순회에서 k번째 노드 구하기
+
+전체 노드가 n개일 때 $O(n)$ 시간 복잡도로 중위 순회하면서 k번째 노드를 찾는 건 간단하다. 그런데 각 노드에 정보를 추가할 수 있다면 이보다 빠르게 수행할 수 있다.
+
+중위 순회에서 k번째 노드를 효율적으로 찾는 프로그램을 작성하라. 각 노드에는 해당 노드를 루트로 한, 부분 트리의 노드의 개수를 저장할 수 있다고 가정한다.
+
+> 힌트: 분할 정복법을 사용하라.
+
+무식한 방법은 중위 순회로 트리를 순회하면서 방문한 노드의 개수를 저장하고 k가 됐을 때 멈추는 것이다. 이 방법의 시간 복잡도는 $O(n)$이 된다. (왼쪽으로 치우친 트리를 생각해 보자. 첫 번째 노드(k=1)를 찾기 위해선 모든 노드를 지나쳐야 한다.)
+
+무식한 방법을 자세히 살펴보면 노드에 담겨 있는 정보를 사용하지 않았다는 사실을 알 수 있다. 예를 들어 k가 왼쪽 부분 트리의 개수보다 크다면 k번째 노드는 왼쪽 부분 트리에 있지 않을 것이다. 더 정확히 말해서 왼쪽 부분 트리에 L개의 노드가 있다면 k번째 노드는 왼쪽 부분 트리를 제외했을 때 (k-L)번째 노드에 있을 것이다. 역으로 말해 k <= L인 경우에는 우리가 찾는 노드는 왼쪽 부분 트리에 있을 것이다.
+
+```java
+public static BinaryTreeNode<Integer> findKthBinaryTree(BinaryTreeNode<Integer> tree, int k) {
+    BinaryTreeNode<Integer> iter = tree;
+    while (iter != null) {
+        int leftSize = iter.left != null ? iter.left.size : 0;
+        if (leftSize + 1 < k) { // k번째 노드는 반드시 오른쪽 부분 트리에 있어야 한다.
+            k -= (leftSize + 1);
+            iter = iter.right;
+        } else if (leftSize == k - 1) { // k번째 노드가 현재 노드이다.
+            return iter;
+        } else { // k번째 노드는 왼쪽 부분 트리에 있어야 한다.
+            iter = iter.left;
+        }
+    }
+    // k가 1과 트리의 크기 사이의 값이라면, 여기에 도달할 수 없다.
+    return null;
+}
+```
+
+반복할 때마다 트리 아래로 내려가므로 시간 복잡도는 $O(h)$이다. h는 트리의 높이다.
+
