add java epi 9.10

--- a/java_epi/ch09/ch09.이진트리.md
+++ b/java_epi/ch09/ch09.이진트리.md
@@ -420,3 +420,43 @@ public static BinaryTreeNode<Integer> findKthBinaryTree(BinaryTreeNode<Integer> 
 
 반복할 때마다 트리 아래로 내려가므로 시간 복잡도는 $O(h)$이다. h는 트리의 높이다.
 
+## 문제 9.10 후임 노드 구하기
+
+이진 트리에서 노드의 후임 노드(successor)란 중위 순회에서 바로 다음에 나오는 노드를 발한다. 위 그림에서 G의 다음 노드는 A이고, A의 다음 노드는 J이다.
+
+이진 트리에서 어떤 노드의 후임 노드를 구하는 알고리즘을 설계하라. 각 노드에는 부모 노드에 대한 정보가 들어 있다고 가정한다.
+
+> 힌트: 노드의 오른쪽 부분 트리를 살펴보라. 오른쪽 부분 트리가 없으면 어떻게 되는가.
+
+무식한 방법을 먼저 생각해 보자. 주어진 노드 바로 다음 노드에 도달했을 때 멈추면 된다. 이 방법의 시간 복잡도는 중위 순회와 같은 $O(n)$이다.
+
+트리의 구조를 조금 더 자세히 살펴보자. 해당 노드가 오른쪽 부분 트리를 가지고 있다면 후임 노드는 반드시 오른쪽 부분 트리에 있기 때문에, 나머지 노드들은 고려할 필요가 없다. 예를 들어 위 그림의 A의 왼쪽 부분 트리의 구조에 관계 없이 A의 후임 노드는 I를 루트로 하는 부분 트리에 반드시 존재한다. 마찬가지로, B의 다음 노드는 F를 루트로하는 부분 트리에 반드시 존재한다. 오른쪽 부분 트리가 있을 때, 해당 노드의 후임 노드는 부분 트리를 중회 순회했을 때 처음 방문하는 노드다. 그 노드는 부분 트리의 '가장 왼쪽'에 있으며, 더 이상 노드가 없을 때까지 왼쪽을 따라 쭉 내려가면 찾을 수 있다.
+
+오른쪽 부분 트리가 없는 경우라면 좀 더 신중하게 생각해야 한다. 만약 주어진 노드에 오른쪽 자식이 없고 이 노드가 부모의 왼쪽 자식이라면, 후임 노드는 바로 부모 노드가 된다. 위 그림의 H의 후임 노드는 G이다. 이번에는 주어진 노드에 오른쪽 자식이 없는 건 동일하지만, 이 노드가 부모의 오른쪽 자식인 경우를 생각해 보자. 이때는 이미 부모를 방문한 뒤다. 이런 경우는 부모를 반복적으로 따라 올라가다가 왼쪽 자식에서 올라갈 때 멈추는 방법으로 후임 노드를 결정할 수 있다. 예를 들어 G 노드에서 부모를 따라 올라가면 F,B,A가 되는데, B는 A의 왼쪽 자식이므로 A에서 멈춘다. 따라서 G의 후임 노드는 A가 된다.
+
+중위 순회에서 해당 노드를 마지막으로 방문하게 되면, 꼭 왼쪽 자식에서 위로 올라가지 않더라도 루트 노드에 도달할 수 있다. 이 경우에는 다음 노드가 존재하지 않는 경우가 된다. 위 그림에서는 노드 P가 이 경우에 해당한다.
+
+```java
+public static BinaryTree<Integer> findSuccessor(BinaryTree<Integer> node) {
+    BinaryTree<Integer> iter = node;
+    if (iter.right != null) {
+        // 노드의 오른쪽 부분 트리에서 가장 왼쪽에 있는 원소를 찾는다.
+        iter = iter.right;
+        while (iter.left != null) {
+            iter = iter.left;
+        }
+        return iter;
+    }
+
+    // 왼쪽 부분 트리에 포함된 가장 가까운 조상을 찾는다.
+    while (iter.parent != null && iter.parent.right == iter) {
+        iter = iter.parent;
+    }
+    // null을 반환한다는 의미는 다음 노드가 존재하지 않는다는 뜻이다.
+    // 예를 들어 트리의 가장 오른쪽 노드가 이 경우가 된다.
+    return iter.parent;
+}
+```
+
+탐색하게 될 간선의 개수 n은 트리의 높이 h보다 많지 않으므로 시간 복잡도는 $O(h)$이다.
+
