--- a/java_epi/ch09/ch09.이진트리.md
+++ b/java_epi/ch09/ch09.이진트리.md
@@ -460,3 +460,56 @@ public static BinaryTree<Integer> findSuccessor(BinaryTree<Integer> node) {
 
 탐색하게 될 간선의 개수 n은 트리의 높이 h보다 많지 않으므로 시간 복잡도는 $O(h)$이다.
 
+## 문제 9.11 O(1) 공간을 사용해서 중위 순회 구현하기
+
+트리의 높이가 h일 때 재귀를 사용하여 중위 순회를 구현하면 공간 복잡도는 $O(h)$이다. 스택을 직접 사용하면 재귀를 없앨 수 있지만 여전히 공간 복잡도는 $O(h)$이다.
+
+비재귀를 사용해서 이진 트리에서 중위 순회를 구현하는 프로그램을 작성하라. 각 노드에는 부모를 가리키는 포인터가 있다고 가정한다.
+
+> 힌트: 어떤 노드가 부모의 왼쪽 자식일지 오른쪽 자식일지 어떻게 알 수 있는가?
+
+중위 순회의 표준 규칙은 왼쪽, 루트, 오른쪽 순서대로 순회하는 것이다. 부분 트리를 모두 순회하고 난 후에는 부모 노드로 돌아와야 한다. 순회를 끝낸 부분 트리가 왼쪽 부분 트리인지 오른쪽 부분 트리인지에 따라서 해야 할 일이 달라진다. 만약 순회가 끝난 부분 트리가 왼쪽 부분 트리라면 부모 노드를 방문한 후에 오른쪽 부분 트리를 방문하면 된다. 만약 오른쪽 부분 트리라면 해당 노드의 부모 노드로 돌아가면 된다.
+
+이 순회를 재귀 없이 순회할 수 있으려면 각 노드에 부모 노드가 누구인지 기록해야 한다. 해시 테이블을 사용하면, 노드가 n개이고 트리의 높이가 h라고 할 때, 시간 및 공간 복잡도는 $O(n)$이 된다. 하지만 부분 트리의 순회가 끝날 때마다 해당 트리를 해시 테이블에서 제거하면 공간 복잡도를 $O(h)$로 줄일 수 있다.
+
+이 문제에서는 각 노드가 부모 노드를 가리키고 있으므로 따로 해시 테이블을 사용할 필요가 없고, 따라서 $O(1)$ 공간 복잡도에 문제를 풀 수 있다.
+
+이 알고리즘을 완성하기 위해서는 부모로 돌아가야 할 때가 언제인지 알 수 있어야 한다. 즉, 왼쪽 부분 트리를 막 끝냈다면 부모 노드를 방문한 뒤에 오른쪽 부분 트리를 순회하면 된다. 오른쪽 부분 트리를 막 끝냈다면 부모 노드를 루트로 한 부분 트리의 순회가 끝난 것이다. 부모 노드로 돌아가기 전에 부분 트리의 루트 노드가 무엇인지 기록함으로써 이 문제를 풀 수 있다. 예를 들어 그림을 보면 C를 루트로 한 부분 트리의 순회가 끝난 뒤 B로 돌아갈 때 C에서 왔다고 기록한다. C가 B의 왼쪽 자식이라면 이제 B의 오른쪽 자식을 순회해야 한다. 만약 F에서 B로 돌아왔다면, F는 B의 왼쪽 자식이 아니기 때문에 B의 오른쪽 자식이 되고, 따라서 B를 루트로 한 부분 트리의 순회를 마쳤다고 할 수 있다.
+
+```java
+public static List<Integer> inorderTraversal(BinaryTree<Integer> tree) {
+    BinaryTree<Integer> prev = null, curr = tree;
+    List<Integer> result = new ArrayList<>();
+
+   while (curr != null) {
+       BinaryTree<Integer> next;
+       if (curr.parent == prev) {
+            // prev에서 curr로 내려왔다.
+            if (curr.left != null) { // 왼쪽으로 계속 내려간다.
+                next = curr.left;
+            } else {
+                result.add(curr.data);
+                // 왼쪽은 끝났으므로, 오른쪽이 비어 있지 않으면 오른쪽으로 내려간다.
+                // 아니면 위로 올라간다.
+                next = (curr.right != null) ? curr.right : curr.parent;
+            }
+       } else if (curr.left == prev) {
+            result.add(curr.data);
+            // 왼쪽은 끝났으므로, 오른쪽이 비어 있지 않으면 오른쪽으로 내려간다.
+            // 아니면 위로 올라간다.
+            next = (curr.right != null) ? curr.right : curr.parent;
+       } else { // 왼쪽과 오른쪽 둘 다 끝났으므로 위로 올라간다.
+            next = curr.parent;
+       }
+
+       prev = curr;
+       curr = next;
+   } 
+   return result;
+}
+```
+
+시간 복잡도는 $O(n)$이고, 공간 복잡도는 $O(1)$이다.
+
+다른 방법도 있다. 노드의 후임 노드가 중위 순회의 노드 방문 순서와 같으므로 가장 왼쪽에 있는 노드에서 시작해서 다음 노드를 계속 호출하면 된다. 이 방법을 사용하면 문제 9.10의 해법을 재사용할 수 있다.
+
