--- a/java_epi/ch09/ch09.이진트리.md
+++ b/java_epi/ch09/ch09.이진트리.md
@@ -513,3 +513,65 @@ public static List<Integer> inorderTraversal(BinaryTree<Integer> tree) {
 
 다른 방법도 있다. 노드의 후임 노드가 중위 순회의 노드 방문 순서와 같으므로 가장 왼쪽에 있는 노드에서 시작해서 다음 노드를 계속 호출하면 된다. 이 방법을 사용하면 문제 9.10의 해법을 재사용할 수 있다.
 
+## 문제 9.12 순회한 데이터를 사용해 이진 트리 복원하기
+
+모양이 다른 이진 트리라 하더라도 중위 순회, 전위 순회, 후위 순회의 결과가 같을 수 있다. 하지만 전위 순회나 후위 순회 중 하나의 결과가 주어지고, 중위 순회의 결과가 주어진다면 유일한 이진 트리를 만들어 낼 수 있다. 단, 각 노드는 서로 다른 키값을 사용해야 한다. 예를 들어 중위 순회가 <F, B, A, E, H, C, D, I, G>이고, 전위 순회가 <H, B, F, E, A, C, D, G, I>라면 이를 만족하는 이진 트리는 다음과 같은 형태로 유일하다.
+
+![그림 9.5](img/9.5.drawio.svg)
+
+어떤 이진 트리의 중위 순회와 전위 순회의 결과가 주어졌을 때, 해당 트리를 복원해 내는 프로그램을 작성하라. 각 노드는 서로 다른 키값을 가지고 있다고 가정해도 좋다.
+
+> 힌트: 루트 노드에 관심을 기울이라.
+
+완전히 무식한 방법을 생각해 보자. 중위 순회로 구할 수 있는 모든 이진 트리를 나열한 뒤에 주어진 전위 순회와 일치하는 트리를 찾는다. 이 방법은 복잡도가 어마어마할 것이다.
+
+예제를 좀 더 주의 깊게 살펴보면, 전위 순회를 통해 루트 노드를 구할 수 있다는 사실을 알 수 있다. 왜냐하면 전위 순회의 첫 번째 노드가 루트가 되기 때문이다. 이를 통해 중위 순회의 수열을 왼쪽 부분 트리, 루트 노드, 오른쪽 부분 트리로 나눌 수 있다.
+
+그다음 중위 순회의 왼쪽 부분 트리의 수열을 사용해서 왼쪽 부분 트리의 전위 순회 수열을 계산할 수 있다. 전위 순회는 루트에서 시작해서 왼쪽 부분 트리, 오른쪽 부분 트리 순서대로 순회를 한다. 중위 순회 수열에서 루트의 위치를 알 수 있으므로 왼쪽 부분 트리의 노드의 개수인 k를 알 수 있다. 따라서 전위 순회 수열에서 루트 다음으로 나오는 k개의 부분수열이 왼쪽 부분 트리의 전위 순회 수열이 된다.
+
+예를 들어 살펴보자. 중위 순회 수열이 <F, B, A, E, H, C, D, I, G>이고 전위 순회 수열이 <H, B, F, E, A, C, D, G, I>라면, 전위 순회 수열에서 처음 등장하는 H가 루트가 된다. 중위 순회 수열을 통해 <F, B, A, E>가 왼쪽 부분 트리의 중위 순회 수열이라는 사실을 알 수 있다. 따라서 전위 순회 수열인 <H, B, F, E, A, C, D, G, I>에서 루트 노드 H 다음에 나오는 4개의 노드 <B, F, E, A>가 왼쪽 부분 트리의 전위 순회 수열과 같다는 사실을 알 수 있다. 비슷한 방법으로 오른쪽 부분 트리도 구할 수 있다. 단말 노드에 도달할 때까지 이 방법을 재귀적으로 적용하면 트리를 구할 수 있다.
+
+단순하게 구현하면 노드가 n개일 때 시간 복잡도는 $O(n^2)$이 된다. 최악의 경우는 비스듬한 트리(skewed tree)가 입력으로 들어올 때다. 중위 순회 수열에서 루트를 찾는 방법은 $O(n)$ 시간이 걸린다. 해시 테이블을 사용해서 초반에 노드와 중위 순회 수열에서 해당 노드의 위치를 미리 구해 놓는다면 시간 복잡도를 좀 더 개선할 수 있다.
+
+```java
+public static BinaryTreeNode<Integer> binaryTreeFromPreorderInorder(
+    List<Integer> preorder, List<Integer> inorder
+) {
+    Map<Integer, Integer> nodeToInorderIdx = new HashMap<Integer, Integer>();
+    for (int i = 0; i < inorder.size(); ++i) {
+        nodeToInorderIdx.put(inorder.get(i), i);
+    }
+    return binaryTreeFromPreorderInorderHelper(
+        preorder, 0, preorder.size(), 0, inorder.size(), nodeToInorderIdx
+    );
+}
+
+// preorder.subList(preorderStart, preorderEnd)와
+// inorder.subList(inorderStart, inorderEnd)를 사용해서 부분 트리를 구한다.
+private static BinaryTreeNode<Integer> binaryTreeFromPreorderInorderHelper(
+    List<Integer> preorder, int preorderStart, int preorderEnd, int inorderStart, int inorderEnd, Map<Integer, Integer> nodeToInorderIdx
+) {
+    if (preorderEnd <= preorderStart || inorderEnd <= inorderStart) {
+        return null;
+    }
+    int rootInorderIdx = nodeToInorderIdx.get(preorder.get(preorderStart));
+    int leftSubtreeSize = rootInorderIdx - inorderStart;
+
+    return new BinaryTreeNode<>(
+        preorder.get(preorderStart),
+        // 재귀적으로 왼쪽 부분 트리를 구한다.
+        binaryTreeFromPreorderInorderHelper(
+            preorder, preorderStart + 1, preorderStart + 1 + leftSubtreeSize,
+            inorderStart, rootInorderIdx, nodeToInorderIdx
+        ),
+        // 재귀적으로 오른쪽 부분 트리를 구한다.
+        binaryTreeFromPreorderInorderHelper(
+            preorder, preorderStart + 1 + leftSubtreeSize, preorderEnd,
+            rootInorderIdx, inorderEnd, nodeToInorderIdx
+        )
+    );
+}
+```
+
+시간 복잡도는 $O(n)$이다. 해시 테이블을 구하는 데 $O(n)$ 시간이 소요되고 재귀에서는 각 노드마다 $O(1)$ 시간을 소요한다. h가 트리의 높이일 때, 공간 복잡도는 $O(n+h) = O(n)$이 된다. 즉, 공간 복잡도는 해시 테이블의 크기와 함수 호출 스택의 최대 깊이의 합과 같다.
+
