add java epi 9.13

--- a/java_epi/ch09/ch09.이진트리.md
+++ b/java_epi/ch09/ch09.이진트리.md
@@ -575,3 +575,46 @@ private static BinaryTreeNode<Integer> binaryTreeFromPreorderInorderHelper(
 
 시간 복잡도는 $O(n)$이다. 해시 테이블을 구하는 데 $O(n)$ 시간이 소요되고 재귀에서는 각 노드마다 $O(1)$ 시간을 소요한다. h가 트리의 높이일 때, 공간 복잡도는 $O(n+h) = O(n)$이 된다. 즉, 공간 복잡도는 해시 테이블의 크기와 함수 호출 스택의 최대 깊이의 합과 같다.
 
+## 문제 9.13 마커가 포함된 전위 순회를 사용해 이진 트리 복원하기
+
+이진 트리의 모양이 다르더라도 전위 순회 수열의 결과는 같을 수 있다.
+
+여기서는 전위 순회를 계산할 때 왼쪽 혹은 오른쪽 자식이 비어 있는지 알려 주는 마커를 사용할 것이다. 예를 들어 그림 9.5의 이진트리의 전위 순회 수열은 다음과 같다.
+
+<H, B, F, null, null, E, A, null, null, null, C, null, D, null, G, I, null, null, null>
+
+널(null) 마커가 포함된 전위 순회 수열이 주어졌을 때 이진 트리를 복원하는 알고리즘을 설계하라.
+
+> 힌트: 전위 순회 수열을 왼쪽에서 오른쪽으로 훑어 나가면서 문제를 풀려고 하다 보면 어려울 수 있다.
+
+한 가지 무식한 방법은 이진 트리를 모두 나열한 뒤에 주어진 전위 순회 수열과 같은 트리를 찾는 것이다. 그런데 이 방법은 시간 복잡도가 감당할 수 없을 만큼 크다.
+
+더 나은 알고리즘을 찾으려면 수열의 첫 번째 노드가 루트라는 점과 루트 다음에는 왼쪽 부분 트리와 오른쪽 부분 트리가 차례로 나온다는 사실을 직관적으로 알고 있어야 한다. 왼쪽 부분 트리의 수열이 언제 끝나는지 알기란 쉽지 않다. 하지만 이 문제를 재귀적으로 푼다면, 왼쪽 부분 트리를 올바르게 계산할 수 있다는 가정하에 오른쪽 부분 트리가 어디서 시작하는지 알 수 있을 것이다.
+
+```java
+// 전역 변수, 현재 부분 트리를 기록한다.
+private static Integer subtreeIdx;
+
+public static BinaryTreeNode<Integer> reconstructPreorder(List<Integer> preorder) {
+    subtreeIdx = 0;
+    return reconstructPreorderSubtree(preorder);
+}
+
+// subtreeIdx를 루트로 한 부분 트리를 복원한다.
+private static BinaryTreeNode<Integer> reconstructPreorderSubtree(List<Integer> preorder) {
+    Integer subtreeKey = preorder.get(subtreeIdx);
+    ++subtreeIdx;
+    if (subtreeKey == null) {
+        return null;
+    }
+    // reconstructPreorderSubtree에서 subtreeIdx를 갱신한다는 사실을 명심하라.
+    // 따라서 다음 두 개의 호출의 순서는 매우 중요하다.
+    BinaryTreeNode<Integer> leftSubtree = reconstructPreorderSubtree(preorder);
+    BinaryTreeNode<Integer> rightSubtree = reconstructPreorderSubtree(preorder);
+
+    return new BinaryTreeNode<>(subtreeKey, leftSubtree, rightSubtree);
+}
+```
+
+트리의 노드가 n개일 때 시간 복잡도는 $O(n)$이다.
+
