add java epi 9.14

--- a/java_epi/ch09/ch09.이진트리.md
+++ b/java_epi/ch09/ch09.이진트리.md
@@ -618,3 +618,36 @@ private static BinaryTreeNode<Integer> reconstructPreorderSubtree(List<Integer> 
 
 트리의 노드가 n개일 때 시간 복잡도는 $O(n)$이다.
 
+## 문제 9.14 이진 트리의 단말 노드에서 연결리스트 구성하기
+
+이진 트리를 사용한 애플리케이션 중에서 실제 정보는 단말 노드에만 저장되어 있는 경우가 있다. 예를 들어 테니스 토너먼트의 매치는 이진 트리로 표현되어 있지만 선수들은 단말 노드에만 표시되어 있다. 중간 노드들은 승자가 올라가는 용도로 사용된다. 이러한 트리의 경우에는 단말 노드를 서로 연결하면 참가자의 리스트를 얻을 수 있다.
+
+이진 트리가 주어졌을 때 단말 노드를 연결하는 연결하는 연결리스트를 계산하라. 단말 노드는 왼쪽에서 오른쪽 순서대로 나타나야 한다. 예를 들어 그림 9.1(첫 그림)에 나와 있는 이진 트리의 결과는 <D, E, H, M, N, P>가 된다.
+
+> 힌트: 점차적으로 리스트를 만들어 나가면 된다. 부분 리스트가 전역으로 주어진다면 쉽다.
+
+아주 단순한 해법은 트리를 두 번 읽는 것이다. 처음에는 단말 노드를 구하고, 두 번째는 가장 왼쪽의 단말 노드가 가장 낮은 점수를 얻는 식으로 각 단말의 점수를 결정한다. 이렇게 해서 오름차순으로 정렬된 단말을 구할 수 있다.
+
+그러나 트리를 꼭 두 번 읽을 필요는 없다. 트리를 왼쪽에서 오른쪽으로 순서대로 처리하면, 단말 노드는 우리가 원하는 순서대로 등장할 것이고 차례대로 리스트에 넣어 주면 된다.
+
+```java
+public static List<BinaryTreeNode<Integer>> createListOfLeaves( BinaryTreeNode<Integer> tree ) {
+    List<BinaryTreeNode<Integer>> leaves = new LinkedList<>();
+    addLeavesLeftToRight(tree, leaves);
+    return leaves;
+}
+
+private static void addLeavesLeftToRight( BinaryTreeNode<Integer> tree, List<BinaryTreeNode<Integer>> leaves ) {
+    if (tree != null) {
+        if (tree.left == null && tree.right == null) {
+            leaves.add(tree);
+        } else {
+            addLeavesLeftToRight( tree.left, leaves );
+            addLeavesLeftToRight( tree.right, leaves );
+        }
+    }
+}
+```
+
+노드가 n개일 때 시간 복잡도는 $O(n)$이다.
+
