--- a/java_epi/ch09/ch09.이진트리.md
+++ b/java_epi/ch09/ch09.이진트리.md
@@ -651,3 +651,69 @@ private static void addLeavesLeftToRight( BinaryTreeNode<Integer> tree, List<Bin
 
 노드가 n개일 때 시간 복잡도는 $O(n)$이다.
 
+## 문제 9.15 이진 트리의 테두리 구하기
+
+이진 트리의 테두리는 다음 순서대로 노드를 나열한 것과 같다. 루트에서 왼쪽 끝에 있는 단말 노드까지 나열된 노드, 왼쪽에서 오른쪽으로 순서대로 나열된 단말 노드, 오른쪽 끝에 있는 단말 노드에서 루트까지 나열된 노드. (왼쪽 혹은 오른쪽 끝에 있는 단말 노드는 중위 순회를 했을 때 처음 혹은 가장 마지막에 나타나는 단말 노드를 뜻한다.) 예를 들어 그림 9.1에 나와 있는 이진 트리의 테두리는 <A, B, C, D, E, H, M, N, P, O, I>가 된다.
+
+이진 트리의 테두리를 작성하는 프로그램을 작성하라.
+
+> 힌트: 루트의 왼쪽 자식과 오른쪽 자식을 거울에 비추어 보듯이 다룰 수 있다.
+
+무식한 방법 중 하나는 케이스 분석을 사용하는 것이다. 여기서 필요한 정보는 루트에서 왼쪽 끝에 있는 단말 노드까지의 경로, 루트에서 오른쪽 끝에 있는 단말 노드까지의 경로, 왼쪽에서 오른쪽 순서대로 나열된 단말 노드들이다.
+
+단말 노드를 왼쪽에서 오른쪽 순서대로 구하는 방법은 이미 알고 있다(문제 9.14). 루트에서 왼쪽 끝에 있는 단말 노드까지의 경로를 구하는 방법은 다음과 같다. 왼쪽 자식이 있는 경우에는 언제나 왼쪽으로 내려가고, 아닌 경우에만 오른쪽으로 내려가면 된다. 같은 방식으로 루트에서 오른쪽 끝에 있는 단말 노드까지의 경로도 구할 수 있다. n이 노드의 개수이고 h가 트리의 높이일 때 이 방법의 시간 복잡도는 $O(h + n + h)$이다. 서로 다른 경로에서 노드가 중복해서 등장할 수 있기 때문에 실제로 구현하기에는 살짝 까다로울 수 있다. 예를 들어 그림 9.1에서 루트에서 왼쪽 끝에 있는 단말 노드까지의 경로는 <A, B, C, D>이고, 단말 노드를 왼쪽에서 오른쪽 순서대로 나열한 경로는 <D, E, H, M, N, P>이고, 루트에서 오른쪽 끝에 있는 단말 노드까지의 경로는 <A, I, O, P> 왼쪽 끝에 있는 단말 노드 D, 오른쪽 끝에 있는 단말 노드 P, 루트 노드 A는 경로 두 개에 중복해서 등장하는 것을 볼 수 있다.
+
+단 한 번의 순회를 통해 루트에서 왼쪽 단말 노드까지의 경로와 왼쪽 부분트리의 단말 노드들을 한 번에 구함으로써 이 방법을 조금 단순화할 수 있다. 그다음 트리를 다시 한 번 순회해서 오른쪽 부분트리의 단말 노드들과 오른쪽 단말 노드에서 루트까지의 경로를 구하면 된다. 그림 9.1을 예로 들면, 첫 번째 순회를 통해 <B, C, D, E, H>를 구할 수 있고 두 번째 순회를 통해 <M, N, P, O, I>를 구할 수 있다. 루트 노드인 A 뒤에 앞에서 구한 두 경로를 덧붙이면 트리의 테두리가 된다.
+
+```java
+public static List<BinaryTreeNode<Integer>> exteriorBinaryTree( BinaryTreeNode<Integer> tree ) {
+    List<BinaryTreeNode<Integer>> exterior = new LinkedList<>();
+    if (tree != null) {
+        exterior.add(tree);
+        exterior.addAll(leftBoundaryAndLeaves(tree.left, true));
+        exterior.addAll(rightBoundaryAndLeaves(tree.right, true));
+    }
+    return exterior;
+}
+
+// subtree가 주어졌을 때 루트와 왼쪽 끝에 있는 단말 노드 사이에 있는 노드와
+// 모든 단말 노드를 구한다.
+private static List<BinaryTreeNode<Integer>> leftBoundaryAndLeaves(
+    BinaryTreeNode<Integer> subtreeRoot, boolean isBoundary
+) {
+    List<BinaryTreeNode<Integer>> result = new LinkedList<>();
+    if (subtreeRoot != null) {
+        if (isBoundary || isLeaf(subtreeRoot)) {
+            result.add(subtreeRoot);
+        }
+        result.addAll(leftBoundaryAndLeaves(subtreeRoot.left, isBoundary));
+        result.addAll(leftBoundaryAndLeaves(
+            subtreeRoot.right, isBoundary && subtreeRoot.left == null
+        ));
+    }
+    return result;
+}
+
+// subtreeRoot가 주어졌을 때 왼쪽에서 오른쪽으로 나열된 단말 노드들과
+// 오른쪽 끝에 있는 단말 노드와 루트 사이에 있는 노드들을 구한다.
+private static List<BinaryTreeNode<Integer>> rightBoundaryAndLeaves(
+    BinaryTreeNode<Integer> subtreeRoot, boolean isBoundary
+) {
+    List<BinaryTreeNode<Integer>> result = new LinkedList<>();
+    if (subtreeRoot != null) {
+        result.addAll(rightBoundaryAndLeaves(subtreeRoot.left, isBoundary && subtreeRoot.right == null));
+        result.addAll(rightBoundaryAndLeaves(subtreeRoot.right, isBoundary));
+        if (isBoundary || isLeaf(subtreeRoot)) {
+            result.add(subtreeRoot);
+        }
+    }
+    return result;
+}
+
+private static boolean isLeaf(BinaryTreeNode<Integer> node) {
+    return node.left == null && node.right == null;
+}
+```
+
+시간 복잡도는 $O(n)$이다.
+
