add java epi 9.16

--- a/java_epi/ch09/ch09.이진트리.md
+++ b/java_epi/ch09/ch09.이진트리.md
@@ -717,3 +717,47 @@ private static boolean isLeaf(BinaryTreeNode<Integer> node) {
 
 시간 복잡도는 $O(n)$이다.
 
+## 문제 9.16 오른쪽 형제 트리 구하기
+
+이진 트리의 각 노드에 다른 노드를 가리키는 next라는 변수가 있다고 가정하자(이 변수는 왼쪽 자식과 오른쪽 자식을 가리키는 변수와는 다른 변수이다). next 변수는 현재 노드의 오른쪽에 있는 형제 노드를 가리킬 때 사용된다. 입력은 그림 9.6처럼 포화 이진 트리(perfect binary tree)라고 가정하자.
+
+![그림 9.6](img/9.16.svg)
+
+포화 이진 트리에서 각 노드의 next 변수가 오른쪽 형제 노드(right sibling tree)를 가리키도록 한다. 점선으로 그려진 화살표는 갱신 후에 next 변수가 가리키는 값을 말한다. 루트에서 오른쪽 끝에 있는 단말 노드까지의 노드, 즉 A, I, M, O는 오른쪽 형제 노드가 없으므로 점선 화살표가 없다.
+
+포화 이진 트리가 주어졌을 때, 각 노드의 next 변수가 오른쪽 노드를 가리키도록 하는 프로그램을 작성하라.
+
+> 적합한 순회 순서를 생각해 보라.
+
+무식하게 생각해 보자. 각 노드의 깊이를 계산한 뒤 이를 해시 테이블에 저장한다. 그 다음 깊이가 같은 노드들을 중위 순회로 방문했을 떄의 순서대로 정렬한다. 그리고 이 순서대로 next 변수를 채워 나간다. 노드의 개수가 n이라고 했을 때 이 방법의 시간 및 공간 복잡도는 $O(n)$이 된다.
+
+공간 복잡도를 개선하려면 트리의 구조를 살펴봐야 한다. 입력으로 포화 이진 트리가 주어지기 때문에 왼쪽 자식 노드의 오른쪽 형제 노드는 언제나 부모의 오른쪽 자식 노드와 같다. 그리고 오른쪽 자식 노드의 오른쪽 형제는 부모의 오른쪽 형제 노드의 왼쪽 자식과 같다. 예를 들어 그림 9.6을 살펴보자. C의 오른쪽 형제 노드는 B의 오른쪽 자식 노드인 F와 같다. F는 B의 오른쪽 자식이기 때문에 F의 오른쪽 형제 노드는 B의 형제 노드의 왼쪽 자식인 J와 같다.
+
+각 높이별로, 왼쪽에서 오른쪽 순서대로 각 노드에 이 규칙을 적용한다. 깊이가 같은 노드들을 순회하면서 next 변수를 채워 넣는 것은 간단하다. 차례대로 순회를 하면서 앞에서 언급한 방법대로 각 노드의 next 변수를 채워 넣으면 된다. 다음 깊이의 노드를 구하기 위해선 각 깊이의 시작 노드를 기록해 놓으면 된다. 각 깊이의 순회를 끝마친 뒤, 다음 깊이의 시작 노드는 기록된 시작 노드의 왼쪽 자식이 된다.
+
+```java
+public static void constructRightSibling(BinaryTreeNode<Integer> tree) {
+    BinaryTreeNode<Integer> leftStart = tree;
+    while (leftStart != null && leftStart.left != null) {
+        populateLowerLevelNextField(leftStart);
+        leftStart = leftStart.left;
+    }
+}
+
+private static void populateLowerLevelNextField( BinaryTreeNode<Integer> startNode ) {
+    BinaryTreeNode<Integer> iter = startNode;
+    while (iter != null) {
+        // 왼쪽 자식 노드의 next 변수를 채워 넣는다.
+        iter.left.next = iter.right;
+        // iter가 같은 높이에 있는 노드 중에서 가장 마지막 노드가 아니라면
+        // 오른쪽 자식 노드의 next 변수를 채워 넣는다.
+        if (iter.next != null) {
+            iter.right.next = iter.next.left;
+        }
+        iter = iter.next;
+    }
+}
+```
+
+각 노드에서 $O(1)$의 연산을 수행하므로 전체 시간 복잡도는 $O(n)$이 된다. 공간 복잡도는 $O(1)$이다.
+
