--- a/java_epi/ch10/ch10.힙.md
+++ b/java_epi/ch10/ch10.힙.md
@@ -48,3 +48,72 @@ public static List<String> topK(int k, Iterator<String> iter) {
 
 Java의 컬렉션 프레임워크를 사용해서 구현한 힙은 PriorityQueue라는 우선순위 큐 클래스이다. 핵심 메서드는 add("Gauss"), peek(), poll()이다. 힙이 비어 있는 경우에 peek()과 poll()은 수행하면 null을 반환한다. 앞에서 언급했듯이 힙의 생성자에 임의의 비교 연산자(comparator)를 구현할 수 있다.
 
+## 문제 10.1 정렬된 파일 합치기
+
+여러분에게 500개의 파일이 주어져 있다. 이 파일에는 S&P 500회사의 주식 거래 정보가 들어 있다. 각 거래 정보는 한 줄에 1232111, AAPL, 30, 456.12의 형태로 작성되어 있다.
+
+첫 번째 숫자(1232111)는 그날 거래를 시작한 이후 걸린 시간을 밀리세컨드(ms)로 표현한 값이다. 각 파일의 각 줄은 시간 순서대로 정렬되어 있다. 여러분은 500개의 파일에 나와 있는 거래 정보를 시간 순서대로 정렬해서 하나의 파일로 작성하려고 한다. 각 파일의 크기는 대략 5GB이다.
+
+내용을 간단히 하기 위해 조금 더 추상적인 형태로 문제를 제시하겠다.
+
+정렬된 시퀀스의 집합이 주어졌을 때, 이들을 하나의 정렬된 시퀀스로 합치는 프로그램을 작성하라. 예를 들어 <3, 5, 7>, <0, 6>, <0, 6, 28>이 입력으로 주어진다면, 결과면 <0, 0, 3, 5 ,6, 6, 7, 28>이 된다.
+
+> 힌트: 각 시퀀스의 어떤 부분이 알고리즘을 수행하는 데 중요한 역할을 하는가?
+
+무식한 방법을 사용하면 이들 시퀀스를 하나의 배열에 합친 뒤 정렬하면 된다. 전체 원소의 개수가 n개일 때 이 방법의 시간 복잡도는 $O(n log n)$이 된다.
+
+하지만 이 방법은 각각의 시퀀스가 정렬되어 있다는 사실을 이용하지 않았다. 따라서 이 특성을 활용하면, 각 시퀀스에서 첫 번째 원소를 뽑아낸 뒤 이들 중에서 가장 작은 원소를 골라내는 과정을 반복하면 된다.
+
+임의의 원소를 삽입하고 최솟값을 뽑아낼 수 있는 원소의 컬렉션을 유지하고 싶을 때는 최소힙이 적당하다.
+
+여기서는 설명을 쉽게 하기 위해 파일 대신 배열을 이용한다. 3개의 정렬된 배열, <3, 5, 7>, <0, 6>, <0, 6, 28>이 있을 때 이들을 합치는 과정을 살펴보자. 실제로는 해당 원소가 어떤 배열의 어느 위치에 있었는지에 대한 추가 정보가 필요하다. (파일을 대상으로 할 경우에는 각 시퀀스에서 처리되지 않은 원소의 인덱스를 알고 있을 필요가 없다. 왜냐하면 다음에 읽어야 할 위치는 파일 I/O 라이브러리가 알고 있기 때문이다.)
+
+최소힙은 각 배열의 첫 번째 원소로 초기화한다. 즉, {3, 0, 0}이 된다. 가장 작은 원소인 0을 뽑아낸 뒤 이를 결과 리스트에 추가하면 <0>이 된다. 그다음 6을 최소힙에 추가하면 {3, 0, 6}이 된다. (세 번째 배열에 있던 0 원소를 뽑았다고 가정했지만, 두 번째 배열을 선택해도 상관 없다.) 그다음 0을 뽑아낸 뒤 이를 결과에 추가하면 <0, 0>이 된다. 그다음 6을 최소힙에 추가하면 {3, 6, 6}이 된다. 그다음 3을 뽑아내고 이를 결과에 추가하면 <0, 0, 3>이 된다. 그다음 5를 최소힙에 추가하면 {5, 6, 6}이 된다. 그다음 5를 뽑아내고 이를 결과에 추가하면 <0, 0, 3, 5>가 된다. 그다음 7을 최소힙에 추가하면 {7, 6, 6}이 된다. 그다음 6을 뽑아서 결과에 추가하면 <0, 0, 3, 5, 6>이 된다. 6은 두 번째 배열에서 선택했다고 가정하자. 이제 두 번째 배열에 남아 있는 원소는 없으므로 최소힙은 {7,6}이 된다. 그다음 6을 뽑아서 결과에 추가하면 <0, 0, 3, 5, 6, 6>이 된다. 그다음 28을 최소힙에 추가하면 {7, 28}이 된다. 그다음 7을 뽑아서 결과에 추가하면 <0, 0, 3, 5, 6, 6, 7>이 된다. 최소힙은 {28}이 된다. 그다음 28을 뽑아서 결과에 추가하면 <0, 0, 3, 5, 6, 6, 7, 28>이 된다. 이제 모든 원소를 다 처리했고 결과 리스트에는 모든 원소가 정렬된 상태로 저장되어 있다.
+
+```java
+private static class ArrayEntry {
+    public Integer value;
+    public Integer arrayId;
+
+    public ArrayEntry(Integer value, Integer arrayId) {
+        this.value = value;
+        this.arrayId = arrayId;
+    }
+}
+
+public static List<Integer> mergeSortedArray( List<List<Integer>> sortedArrays ) {
+    List<Iterator<Integer>> iters = new ArrayList<>(sortedArrays.size());
+    for (List<Integer> array : sortedArrays) {
+        iters.add(array.iterator());
+    }
+    PriorityQueue<ArrayEntry> minHeap = new PriorityQueue<>(
+        ((int)sortedArray.size()),
+        new Comparator<ArrayEntry>() {
+            @Override
+            public int compare(ArrayEntry o1, ArrayEntry o2) {
+                return Integer.compare(o1.value, o2.value);
+            }
+        }
+    );
+    for (int i = 0; i < iter.size(); i++) {
+        if (iters.get(i).hasNext()) {
+            minHeap.add(new ArrayEntry(iters.get(i).next(), i));
+        }
+    }
+
+    List<Integer> result = new ArrayList<>();
+    while (!minHeap.isEmpty()) {
+        ArrayEntry headEntry = minHeap.poll();
+        result.add(headEntry.value);
+        if (iters.get(headEntry.arrayId).hasNext()) {
+            minHeap.add(new ArrayEntry(iters.get(headEntry.arrayId).next(), headEntry.arrayId));
+        }
+    }
+    return result;
+}
+```
+
+k가 입력으로 주어진 시퀀스의 개수라고 하자. 최소힙에는 k보다 많은 원소가 들어 있을 수 없다. extract-min 연산과 insert 연산은 모두 $O(log k)$ 시간이 걸린다. 따라서 합치는 작업은 $O(n log k)$ 시간에 수행할 수 있다. 최종 결과를 쓸 때 필요한 공간을 제외하고서 $O(k)$의 공간 복잡도가 필요하다. 만약에 배열이 아닌 파일에서 읽고 파일에서 쓴다면, 추가로 $O(k)$ 공간만 필요할 것이다.
+
+한번에 두 개씩 병합 정렬(merge sort)을 사용해서 k개의 파일을 재귀적으로 합칠 수도 있다. 그러면 파일의 개수가 k, k/2, k/4의 방식으로 줄어들 것이다. 총 log k번 반복하게 되고, 매번 $O(n)$의 시간 복잡도가 소요될 것이므로 전체 시간 복잡도는 힙을 사용했을 때와 마찬가지로 $O(n log k)$가 된다. 공간 복잡도는 합리적인 방법으로 병합 정렬을 구현했을 때와 마찬가지로 $O(n)$이 된다. $k << n$일 때 힙을 사용했을 때의 공간 복잡도인 $O(k)$보다 상당히 크다.
+
