add java epi 10.2

--- a/java_epi/ch10/ch10.힙.md
+++ b/java_epi/ch10/ch10.힙.md
@@ -81,7 +81,7 @@ private static class ArrayEntry {
     }
 }
 
-public static List<Integer> mergeSortedArray( List<List<Integer>> sortedArrays ) {
+public static List<Integer> mergeSortedArrays( List<List<Integer>> sortedArrays ) {
     List<Iterator<Integer>> iters = new ArrayList<>(sortedArrays.size());
     for (List<Integer> array : sortedArrays) {
         iters.add(array.iterator());
@@ -116,4 +116,50 @@ public static List<Integer> mergeSortedArray( List<List<Integer>> sortedArrays )
 k가 입력으로 주어진 시퀀스의 개수라고 하자. 최소힙에는 k보다 많은 원소가 들어 있을 수 없다. extract-min 연산과 insert 연산은 모두 $O(log k)$ 시간이 걸린다. 따라서 합치는 작업은 $O(n log k)$ 시간에 수행할 수 있다. 최종 결과를 쓸 때 필요한 공간을 제외하고서 $O(k)$의 공간 복잡도가 필요하다. 만약에 배열이 아닌 파일에서 읽고 파일에서 쓴다면, 추가로 $O(k)$ 공간만 필요할 것이다.
 
 한번에 두 개씩 병합 정렬(merge sort)을 사용해서 k개의 파일을 재귀적으로 합칠 수도 있다. 그러면 파일의 개수가 k, k/2, k/4의 방식으로 줄어들 것이다. 총 log k번 반복하게 되고, 매번 $O(n)$의 시간 복잡도가 소요될 것이므로 전체 시간 복잡도는 힙을 사용했을 때와 마찬가지로 $O(n log k)$가 된다. 공간 복잡도는 합리적인 방법으로 병합 정렬을 구현했을 때와 마찬가지로 $O(n)$이 된다. $k << n$일 때 힙을 사용했을 때의 공간 복잡도인 $O(k)$보다 상당히 크다.
+
+## 문제 10.2 증가했다가 감소하는 배열 정렬하기
+
+배열의 원소가 특정 인덱스까지 증가했다가 감소하고 다시 증가하는 과정이 k번 반복된다면 이 배열을 k-증가-감소라고 한다. 그림 10.2에 자세히 나와 있다.
+
+![10.2 4-증가-감소 배열](img/10.2.svg)
+
+k-증가-감소 배열을 정렬하는 효율적인 알고리즘을 설계하라.
+
+> 이 문제를 k개의 정렬된 배열을 합치는 문제로 바꿀 수 있을까?
+
+무식한 방법을 써 보자. k-증가-감소의 특성, 즉 배열의 원소들이 내림차순 또는 오름차순으로 부분적이나마 정렬되어 있다는 사실을 무시한 채 배열을 정렬한다. 배열의 길이가 n일 때 정렬의 시간 복잡도는 $O(n log n)$이 된다.
+
+만약 k가 n보다 굉장히 작다면 개선할 여지가 있다. k가 2라고 가정해 보자. 입력 배열은 증가하는 부분배열과 감소하는 부분배열, 이렇게 두 개의 부분 배열로 이루어져 있다. 따라서 두 번째 부분배열을 뒤집어 두 개의 정렬된 배열을 만든 뒤 이 둘을 합쳐주면 된다. 두 개의 정렬된 배열을 하나로 합치는 작업은 간단하게 $O(n)$ 시간에 할 수 있다.
+
+따라서 일반화하면 감소하는 부분배열의 순서를 뒤집으면 된다. 그림 10.2를 보면 A를 <57, 131, 493>, <221, 294>, <339, 418, 452>, <190, 442> 이렇게 네 개의 정렬된 배열로 구분할 수 있다. 이제 문제 10.1의 해법을 사용해서 이들을 합치면 된다.
+
+```java
+public static List<Integer> sortKIncreasingDecreasingArrayArray(List<Integer> A) {
+    // A를 정렬된 배열의 집합으로 구분한다.
+    List<List<Integer>> sortedSubarrays = new ArrayList<>();
+    SubarrayType subarrayType = SubarrayType.INCREASING;
+    int startIdx = 0;
+    for (int i = 0; i <= A.size(); ++i) {
+        if ( i == A.size() // A가 끝났다. 마지막 부분배열을 추가한다.
+            || (A.get(i - 1) < A.get(i) && subarrayType == SubarrayType.DECREASING)
+            || (A.get(i - 1) >= A.get(i) && subarrayType == SubarrayType.INCREASING)
+         ) { 
+            List<Integer> subList = A.subList(startIdx, i);
+            if (subarrayType == SubarrayType.DECREASING) {
+                Collections.reverse(subList);
+            }
+            sortedArrays.add(subList);
+            startIdx = i;
+            subarrayType = (subarrayType == SubarrayType.INCREASING
+                            ? SubarrayType.DECREASING
+                            : SubarrayType.INCREASING)
+        }
+    }
+    return MergeSortedArrays.mergeSortedArrays(sortedSubarrays);
+}
+
+private static enum SubarrayType { INCREASING, DECREASING }
+```
+
+문제 10.1의 해법과 같이 시간 복잡도는 $O(n log k)$가 된다.
 
