add java epi 10.3

--- a/java_epi/ch10/ch10.힙.md
+++ b/java_epi/ch10/ch10.힙.md
@@ -163,3 +163,45 @@ private static enum SubarrayType { INCREASING, DECREASING }
 
 문제 10.1의 해법과 같이 시간 복잡도는 $O(n log k)$가 된다.
 
+## 문제 10.3 거의 정렬된 배열 정렬하기
+
+완벽하지는 않지만 대부분 정렬된 상태의 데이터를 다루는 경우가 종종 있다. 예를 들어 서버에 시간 정보가 찍힌 주식 자료가 들어오는 경우에 서버의 부하 정도와 네트워크의 이동 경로에 따라서 시간순으로 이전 주식 자료가 다른 자료보다 살짝 늦게 들어올 수 있다. 여기서는 이러한 데이터를 효율적으로 정렬하는 문제를 다룰 것이다.
+
+굉장히 길이가 긴 수열이 입력으로 주어졌을 때 이를 정렬된 순서대로 출력하는 프로그램을 작성하라. 각 숫자의 위치는 정렬되었을 때의 위치보다 최대 k만큼 떨어져 있다(이런 배열을 k-정렬된 배열이라 한다). 예를 들어 <3, -1, 2, 6, 4, 5, 8>은 최종 정렬된 숫자 위치보다 최대 2만큼 떨어져 있다.
+
+> 힌트: i번째 숫자를 읽은 후에 몇 개나 더 읽어야 해당 숫자를 올바른 위치에 놓을 수 있을까?
+
+무식한 방법은 주어진 수열을 배열에 넣은 후에 정렬하고 그 결과를 출력하는 것이다. 입력의 길이가 n일 때 이 방법의 시간 복잡도는 $O(n log n)$이고 공간 복잡도는 $O(n)$이다.
+
+하지만 거의 정렬되었다는 이점을 사용하면 복잡도를 더 개선할 수 있다. 즉, k + 1개의 숫자 중에서 가장 작은 숫자는 이후의 모든 숫자보다 반드시 작아야 한다. 주어진 예제에서 첫 숫자 세 개 3, -1, 2에서 가장 작은 숫자인 -1은 전체 숫자에서 가장 작은 숫자여야만 한다. 왜냐하면 입력으로 주어진 모든 숫자가 최종 정렬된 위치에서 최대 2만큼 떨어져 있다는 속성을 가지고 있고 정렬된 수열에서 가장 작은 숫자는 0번 인덱스에 위치해 있기 때문이다. 4를 읽은 후에는 3,2,4 중에서 가장 작은 숫자인 2가 두 번째로 작은 숫자가 된다.
+
+이를 일반화해 보자. 우리는 k + 1개의 숫자를 저장하고, 그중에서 최솟값을 찾는 작업과 새로운 값을 추가하는 작업을 효율적으로 할 수 있는 자료구조가 필요하다. 따라서 이를 수행하는데 가장 적합한 자료구조는 최소힙일 것이다. 첫 번째 k개의 숫자를 최소힙에 추가한다. 그리고 다음 숫자를 최소힙에 추가한 뒤 최솟값을 찾는다.(숫자를 모두 소진해 버렸다면 최솟값을 찾는 작업만 수행하면 된다.)
+
+```java
+public static List<Integer> sortApproximatelySortedData(Iterator<Integer> sequence, int k) {
+    List<Integer> result = new ArrayList<>();
+    PriorityQueue<Integer> minHeap = new PriorityQueue<>();
+    // 첫 k개의 원소를 minHeap에 추가한다.
+    // 만약 k개보다 적은 원소가 들어 있다면 멈춘다.
+    for (int i = 0; i < k && sequence.hasNext(); ++i) {
+        minHeap.add(sequence.next());
+    }
+
+    // 새로운 원소가 들어오면, minHeap에 추가한 뒤 최솟값을 뽑아낸다.
+    while (sequence.hasNext()) {
+        minHeap.add(sequence.next());
+        Integer smallest = minHeap.remove();
+        result.add(smallest);
+    }
+    
+    // 원소를 모두 읽었다면, 반복적으로 남아 있는 원소를 뽑아낸다.
+    while(!minHeap.isEmpty()) {
+        Integer smallest = minHeap.remove();
+        result.add(smallest);
+    }
+    return result;
+}
+```
+
+시간 복잡도는 $O(n log k)$이고, 공간 복잡도는 $O(k)$이다.
+
